54f8ee9 fix(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_ckb.properties
+++ b/i18n/i18n_app_ckb.properties
@@ -12,7 +12,7 @@ average=Average
 bimonthly=Bi-monthly
 boundary_layer=Boundary layer
 by_data_element=By data element
-cancel=Cancel
+cancel=\u0644\u0627\u0628\u0631\u062f\u0646
 can_edit_and_view=Can edit and view
 can_view=Can view
 chart=Chart
@@ -32,10 +32,10 @@ current_legends=Current legends
 daily=Daily
 data=Data
 data_and_periods=Data and periods
-dataelement=Data element
+dataelement=\u062f\u0627\u062a\u0627\u064a \u0633\u0629\u0631\u0629\u0643\u064a
 dataelement_group=Data element group
 dataset=Data set
-delete=Delete
+delete=\u0633\u0695\u06cc\u0646\u06d5\u0648\u06d5
 delete_favorite=Delete favorite
 details=Details
 download=Download
@@ -84,7 +84,7 @@ has_no_orgunits=has no organisation units
 high_color_size=High color / size
 highlight_color=Highlight color
 high_size=High size
-home=Home
+home=\u0645\u0627\u06b5\u0629\u0648\u0629
 indicator=Indicator
 indicator_group=Indicator group
 information=Information
@@ -104,10 +104,10 @@ last_12_weeks=Last 12 weeks
 last_52_weeks=Last 52 weeks
 last_bimonth=Last bi-month
 last_financial_year=Last financial year
-last_month=Last month
+last_month=\u0645\u0627\u0646\u06af\u06cc \u0695\u0627\u0628\u0631\u062f\u0648\u0648
 last_quarter=Last quarter
 last_sixmonth=Last six-month
-last_week=Last week
+last_week=\u0647\u06d5\u0641\u062a\u06d5\u06cc \u0695\u0627\u0628\u0631\u062f\u0648\u0648
 last_5_years=Last 5 years
 last_year=Last year
 latitude=Latitude
@@ -130,7 +130,7 @@ low_size=Low size
 manage_favorites=Manage favorites
 map=Map
 max=\u0632\u06cc\u0627\u062a\u0631\u06cc\u0646
-min=Min
+min=\u06a9\u06d5\u0645\u062a\u0631\u06cc\u0646
 min_max_c=Min/max \u00b0C
 min_max_elevation=Min/max elevation
 min_max_people=Min/max people
@@ -138,7 +138,7 @@ min_max_rainfall=Min/max rainfall
 min_max_value=Min/max value
 monthly=Monthly
 name=Name
-next=Next
+next=\u062f\u0627\u0647\u0627\u062a\u0648\u0648
 nighttime_lights=Nighttime lights
 no=\u0646\u06d5\u062e\u06ce\u0631
 no_groupset_selected=No group set selected
@@ -166,9 +166,9 @@ organisationunit_search=Organisation unit search
 osm_light=OSM Light
 overwrite=Overwrite
 overwrite_favorite=Overwrite favorite
-page=Page
+page=\u0644\u0627\u0628\u0629\u0631\u0629
 parent_unit=Parent unit
-period=Period
+period=\u0645\u0627\u0648\u0629
 period_type=Period type
 phone_number=Phone number
 placement=Placement
@@ -188,14 +188,14 @@ quarterly=Quarterly
 relative=Relative
 relocate=Relocate
 relocate_facility=Relocate facility
-remove=Remove
+remove=\u0644\u0627\u0628\u0631\u062f\u0646
 rename=Rename
 reporting_rates=Reporting rates
 revision=Revision
-search=Search
+search=\u06af\u06d5\u0695\u0627\u0646
 search_for_favorites=Search for favorites
 search_for_user_groups=Search for user groups
-select=Select
+select=\u0647\u06d5\u06b5\u0628\u0698\u0627\u0631\u062f\u0646
 select_groups=Select groups
 selection_mode=Selection mode
 select_dataset=Select dataset
@@ -206,7 +206,7 @@ select_organisation_unit_groups=Select organisation unit groups
 select_organisation_unit_levels=Select organisation unit levels
 select_organisation_units=Select organisation units
 select_period=Select period
-select_program=Select program
+select_program=\u067e\u0631\u06c6\u06af\u0631\u0627\u0645 \u0647\u06d5\u06b5\u0628\u0698\u06ce\u0631\u06d5
 select_service=Select service
 select_stage=Select stage
 select_sub_units=Select sub-units
