--- a/i18n/i18n_app_my.properties
+++ b/i18n/i18n_app_my.properties
@@ -1,6 +1,6 @@
 about=\u1021\u1000\u103c\u1031\u102c\u1004\u103a\u1038\u1021\u101b\u102c
 add_legend=Add legend
-add_new=Add new
+add_new=\u1021\u101e\u1005\u103a\u1011\u100a\u103a\u1037\u1001\u103c\u1004\u103a\u1038
 address=\u101c\u102d\u1015\u103a\u1005\u102c
 add_to_dashboard=Add to dashboard
 aggregation_type=Aggregation type
@@ -8,35 +8,35 @@ allow_external_access=Allow external access
 and_or_lower_than=And/or lower than
 attribution=Attribution
 automatic=Automatic
-average=Average
+average=\u1015\u103b\u1019\u103a\u1038\u1019\u103b\u103e
 bimonthly=\u1014\u103e\u1005\u103a\u101c\u1010\u1005\u103a\u1000\u103c\u102d\u1019\u103a
 boundary_layer=Boundary layer
 by_data_element=By data element
-cancel=Cancel
+cancel=\u1015\u101a\u103a\u1016\u103b\u1000\u103a\u101e\u100a\u103a
 can_edit_and_view=\u1015\u103c\u1004\u103a\u1006\u1004\u103a\u104d\u1000\u103c\u100a\u103a\u1037\u101b\u103e\u102f\u1014\u102d\u102f\u1004\u103a\u101e\u100a\u103a
-can_view=Can view
+can_view=\u1000\u103c\u100a\u103a\u1037\u101b\u103e\u102f\u1014\u102d\u102f\u1004\u103a\u101e\u100a\u103a
 chart=Chart
 classes_method=Classes / method
 clear=\u101b\u103e\u1004\u103a\u1038\u101c\u1004\u103a\u1038\u101e\u100a\u103a
 clear_map=Clear map
 clustering=Clustering
-code=Code
+code=\u1000\u102f\u1012\u103a
 color_scale=Color scale
 coordinate_field=Coordinate field
 coordinates=Coordinates
 coordinates_could_not_be_loaded=Coordinates could not be loaded
-count=Count
-create=Create
+count=\u1021\u101b\u1031\u1021\u1010\u103d\u1000\u103a
+create=\u1016\u1014\u103a\u1010\u102e\u1038\u101e\u100a\u103a
 created_by=Created by
 current_legends=Current legends
-daily=Daily
-data=Data
+daily=\u1014\u1031\u1037\u1005\u1009\u103a
+data=\u1021\u1001\u103b\u1000\u103a\u1021\u101c\u1000\u103a
 data_and_periods=Data and periods
-dataelement=Data element
+dataelement=data element
 dataelement_group=data element \u1021\u102f\u1015\u103a\u1005\u102f
-dataset=Data set
-delete=Delete
-delete_favorite=Delete favorite
+dataset=Dataset
+delete=\u1016\u103b\u1000\u103a\u1006\u102e\u1038\u101e\u100a\u103a
+delete_favorite=favourite \u1000\u102d\u102f\u1016\u103b\u1000\u103a\u1015\u102b\u104b
 details=\u1021\u101e\u1031\u1038\u1005\u102d\u1010\u103a\u1019\u103b\u102c\u1038
 download=Download
 download_map_as_png=Download map as PNG
@@ -75,8 +75,8 @@ google_hybrid=Google Hybrid
 google_streets=Google Streets
 go_to_charts=Go to charts
 go_to_pivot_tables=Go to pivot tables
-greater_than=Greater than
-group=Group
+greater_than=\u1011\u1000\u103a\u1000\u103c\u102e\u1038\u101e\u100a\u103a\u104b
+group=\u1021\u102f\u1015\u103a\u1005\u102f
 group_nearby_events=Group nearby events
 groups=Groups
 groupset=Group set
@@ -84,17 +84,17 @@ has_no_orgunits=has no organisation units
 high_color_size=High color / size
 highlight_color=Highlight color
 high_size=High size
-home=Home
-indicator=Indicator
+home=\u1015\u1004\u103a\u1019\u1005\u102c\u1019\u103b\u1000\u103a\u1014\u103e\u102c
+indicator=indicator
 indicator_group=Indicator group
 information=Information
 infrastructural_data=Infrastructural data
 invalid_parameter=Invalid parameter
 item_type=Item type
 landcover=Landcover
-last_2_sixmonths=Last 2 six-months
+last_2_sixmonths=\u101c\u103d\u1014\u103a\u1001\u1032\u1037\u101e\u1031\u102c \u1046\u101c(\u1042\u1000\u103c\u102d\u1019\u103a)
 last_3_months=\u101c\u103d\u1014\u103a\u1001\u1032\u1037\u101e\u1031\u102c \u1041\u1042\u101c
-last_4_quarters=Last 4 quarters
+last_4_quarters=\u101c\u103d\u1014\u103a\u1001\u1032\u1037\u101e\u1031\u102c \u1041\u1042\u101c\u1000
 last_4_weeks=Last 4 weeks
 last_5_financial_years=Last 5 financial years
 last_6_bimonths=\u101c\u103d\u1014\u103a\u1001\u1032\u1037\u101e\u1031\u102c \u1046\u101c(\u1042\u1000\u103c\u102d\u1019\u103a)
@@ -102,11 +102,11 @@ last_6_months=Last 6 months
 last_12_months=\u101c\u103d\u1014\u103a\u1001\u1032\u1037\u101e\u1031\u102c \u1041\u1042\u101c
 last_12_weeks=Last 12 weeks
 last_52_weeks=Last 52 weeks
-last_bimonth=Last bi-month
+last_bimonth=\u101c\u103d\u1014\u103a\u1001\u1032\u1037\u101e\u1031\u102c \u1046\u101c\u1000
 last_financial_year=Last financial year
-last_month=Last month
-last_quarter=Last quarter
-last_sixmonth=Last six-month
+last_month=\u101a\u1001\u1004\u103a\u101c
+last_quarter=\u101c\u103d\u1014\u103a\u1001\u1032\u1037\u101e\u1031\u102c \u1043\u101c\u1000
+last_sixmonth=\u101c\u103d\u1014\u103a\u1001\u1032\u1037\u101e\u1031\u102c \u1046\u101c\u1000
 last_week=Last week
 last_5_years=\u101c\u103d\u1014\u103a\u1001\u1032\u1037\u101e\u1031\u102c \u1045 \u1014\u103e\u1005\u103a
 last_year=\u101a\u1001\u1004\u103a\u1014\u103e\u1005\u103a
@@ -127,18 +127,18 @@ level=Level
 longitude=Longitude
 low_color_size=Low color / size
 low_size=Low size
-manage_favorites=Manage favorites
+manage_favorites=favorites \u1005\u102e\u1005\u1009\u103a\u1015\u102b\u104b
 map=Map
 max=\u1021\u1019\u103b\u102c\u1038\u1006\u102f\u1036\u1038
-min=Min
+min=\u1021\u1014\u100a\u103a\u1038\u1006\u102f\u1036\u1038
 min_max_c=Min/max \u00b0C
 min_max_elevation=Min/max elevation
 min_max_people=Min/max people
 min_max_rainfall=Min/max rainfall
 min_max_value=Min/max value
 monthly=\u101c\u1005\u1009\u103a
-name=Name
-next=Next
+name=\u1021\u1019\u100a\u103a
+next=\u101b\u103e\u1031\u1037\u101e\u102d\u102f\u1037
 nighttime_lights=Nighttime lights
 no=No
 no_groupset_selected=No group set selected
@@ -168,7 +168,7 @@ overwrite=Overwrite
 overwrite_favorite=Overwrite favorite
 page=Page
 parent_unit=Parent unit
-period=Period
+period=\u1021\u1001\u103b\u102d\u1014\u103a\u1000\u102c\u101c
 period_type=Period type
 phone_number=Phone number
 placement=Placement
@@ -184,18 +184,18 @@ previous=\u1014\u1031\u102c\u1000\u103a\u101e\u102d\u102f\u1037
 program=Program
 program_indicators=Program indicators
 public_access=Public access
-quarterly=Quarterly
+quarterly=\u101e\u102f\u1036\u1038\u101c\u1010\u1005\u103a\u1000\u103c\u102d\u1019\u103a
 relative=\u1006\u1000\u103a\u1005\u1015\u103a\u1019\u103e\u102f
 relocate=Relocate
 relocate_facility=Relocate facility
-remove=Remove
-rename=Rename
+remove=\u1016\u101a\u103a\u101b\u103e\u102c\u1038\u1001\u103c\u1004\u103a\u1038
+rename=\u1021\u1019\u100a\u103a\u101e\u1005\u103a\u1015\u1031\u1038\u1001\u103c\u1004\u103a\u1038
 reporting_rates=Reporting rates
 revision=Revision
 search=Search
 search_for_favorites=Search for favorites
-search_for_user_groups=Search for user groups
-select=Select
+search_for_user_groups=\u1021\u101e\u102f\u1036\u1038\u1015\u103c\u102f\u101e\u1030\u1021\u102f\u1015\u103a\u1005\u102f\u1019\u103b\u102c\u1038\u1000\u102d\u102f\u101b\u103e\u102c\u101e\u100a\u103a
+select=\u101b\u103d\u1031\u1038\u1001\u103b\u101a\u103a\u1015\u102b\u104b
 select_groups=Select groups
 selection_mode=Selection mode
 select_dataset=Select dataset
@@ -205,8 +205,8 @@ select_levels=Select levels
 select_organisation_unit_groups=Select organisation unit groups
 select_organisation_unit_levels=Select organisation unit levels
 select_organisation_units=Select organisation units
-select_period=Select period
-select_program=Select program
+select_period=\u1021\u1001\u103b\u102d\u1014\u103a\u1000\u102c\u101c\u101b\u103d\u1031\u1038\u1001\u103b\u101a\u103a\u1015\u102b\u104b
+select_program=Select Program
 select_service=Select service
 select_stage=Select stage
 select_sub_units=Select sub-units
@@ -214,12 +214,12 @@ select_year=Select year
 service_url=Service URL
 share=Share
 share_with_other_people=Share with others
-sharing_settings=Sharing settings
+sharing_settings=\u1005\u102c\u101b\u1004\u103a\u1038\u1010\u100a\u103a\u1006\u1031\u102c\u1000\u103a\u1011\u102c\u1038\u101e\u100a\u103a\u1037\u1021\u1014\u1031\u1021\u1011\u102c\u1038\u1000\u102d\u102f\u1019\u103b\u103e\u101d\u1031\u1001\u103c\u1004\u103a\u1038
 show=Show
 show_circular_area=Show circular area with radius (m)
 show_information_sheet=Show information
 show_lon_lat=Show longitude/latitude
-sixmonthly=Six-monthly
+sixmonthly=\u1001\u103c\u1031\u102c\u1000\u103a\u101c\u1010\u1005\u103a\u1000\u103c\u102d\u1019\u103a
 sixmonthly_april=Six-monthly April
 stage=Stage
 start_date=Start date
@@ -247,7 +247,7 @@ this_month=This month
 this_quarter=This quarter
 this_sixmonth=This six-month
 this_week=This week
-this_year=This year
+this_year=\u1012\u102e\u1014\u103e\u1005\u103a
 time_since_last_data_update=Elapsed time since last data update
 today=Today
 totals=Totals
@@ -259,9 +259,9 @@ user_ou=User OU
 user_sub_units=User sub-units
 user_sub_x2_units=User sub-x2-units
 value=\u1010\u1014\u103a\u1016\u102d\u102f\u1038
-value_type=Value type
+value_type=\u1010\u1014\u103a\u1016\u102d\u102f\u1038\u1015\u102f\u1036\u1005\u1036
 variance=Variance
-version=Version
+version=\u1011\u102f\u1010\u103a\u101d\u1031\u101e\u100a\u103a\u1037\u1021\u1000\u103c\u102d\u1019\u103a
 weekly=\u1021\u1015\u1010\u103a\u1005\u1009\u103a
 weekly_wednesday=Weekly (Start Wednesday)
 weekly_thursday=Weekly (Start Thursday)
