--- a/i18n/i18n_app_nl.properties
+++ b/i18n/i18n_app_nl.properties
@@ -8,14 +8,14 @@ allow_external_access=Allow external access
 and_or_lower_than=And/or lower than
 attribution=Attribution
 automatic=Automatisch
-average=Average
+average=Gemiddelde
 bimonthly=Tweemaandelijks
 boundary_layer=Boundary layer
 by_data_element=Volgens gegevenselement
-cancel=Cancel
+cancel=Annuleren
 can_edit_and_view=Kan bewerken en bezichtigen
 can_view=Can view
-chart=Chart
+chart=Grafiek
 classes_method=Classes / method
 clear=Clear
 clear_map=Clear map
@@ -25,38 +25,38 @@ color_scale=Color scale
 coordinate_field=Co\u00f6rdinatenveld
 coordinates=Coordinates
 coordinates_could_not_be_loaded=Coordinates could not be loaded
-count=Count
+count=Tel
 create=Create
-created_by=Created by
+created_by=Gecre\u00eberd door
 current_legends=Current legends
-daily=Daily
-data=Data
+daily=Dagelijks
+data=Gegevens
 data_and_periods=Data and periods
-dataelement=Data element
+dataelement=Informatieonderdeel
 dataelement_group=Gegevenselementengroep
-dataset=Data set
-delete=Delete
+dataset=Gegevensreeks
+delete=Verwijder
 delete_favorite=Delete favorite
 details=Details
 download=Downloaden
 download_map_as_png=Download map as PNG
-drill_down_one_level=Drill down one level
+drill_down_one_level=Ga \u00e9\u00e9n niveau omlaag
 drill_up_one_level=Ga \u00e9\u00e9n niveau omhoog
 duplicate=Duplicate
 earthengine_layer=Google Earth Engine
 earth_engine_layer_legend=Google Earth Engine legend
-elevation=Elevation
-edit_layer=Edit layer
+elevation=Hoogte
+edit_layer=Bewerk laag
 edit_legend=Edit legend
-email=Email
+email=Emailadres
 end_date=Einddatum
 end_value_should_be_bigger_than_start_value=End value should be bigger than start value
 equal_counts=Gelijke aantallen
-equal_intervals=Equal intervals
-event_data_item=Event data item
+equal_intervals=Gelijke intervallen
+event_data_item=Gebeurtenisgegevensitem
 event_data_items=Gebeurtenisgegevensitems
 event_layer=Event layer
-event_location=Event location
+event_location=Gebeurtenislocatie
 event_time=Tijd van gebeurtenis
 external_layer=Externe laag
 external_layer_legend=External layer legend
@@ -70,20 +70,20 @@ filter=Filter
 filter_by_value=Filter by value
 financial_april=Financieel jaar (Start april)
 financial_july=Financieel jaar (Start juli)
-financial_oct=Financial year (Start October)
+financial_oct=Financieel jaar (Start oktober)
 google_hybrid=Google Hybrid
 google_streets=Google Streets
 go_to_charts=Go to charts
 go_to_pivot_tables=Go to pivot tables
 greater_than=Greater than
-group=Group
+group=Groep
 group_nearby_events=Group nearby events
-groups=Groups
+groups=Groepen
 groupset=Groepsreeks
 has_no_orgunits=has no organisation units
 high_color_size=High color / size
 highlight_color=Highlight color
-high_size=High size
+high_size=Hoge maat
 home=Home
 indicator=Indicator
 indicator_group=Indicatorgroep
@@ -92,22 +92,22 @@ infrastructural_data=Infrastructural data
 invalid_parameter=Invalid parameter
 item_type=Itemsoort
 landcover=Landbedekking
-last_2_sixmonths=Last 2 six-months
+last_2_sixmonths=Laatste 2 halfjaren
 last_3_months=Laatste 3 maanden
-last_4_quarters=Last 4 quarters
+last_4_quarters=Laatste 4 kwartieren
 last_4_weeks=Laatste 4 weken
-last_5_financial_years=Last 5 financial years
+last_5_financial_years=Laatste 5 financi\u00eble jaren
 last_6_bimonths=Last 6 bi-months
 last_6_months=Laatste 6 maanden
 last_12_months=Laatste 12 maanden
 last_12_weeks=Laatste 12 weken
-last_52_weeks=Last 52 weeks
+last_52_weeks=Laatste 52 weken
 last_bimonth=Last bi-month
-last_financial_year=Last financial year
-last_month=Last month
-last_quarter=Last quarter
-last_sixmonth=Last six-month
-last_week=Last week
+last_financial_year=Laatste financieel jaar
+last_month=Laatste maand
+last_quarter=Laatste kwartier
+last_sixmonth=Laatste halfjaar
+last_week=Laatste week
 last_5_years=Laatste 5 jaren
 last_year=Laatste jaar
 latitude=Breedtegraad
@@ -124,9 +124,9 @@ legendsets=Legend sets
 legend_symbolizer=Symbolizer
 legend_type=Legend type
 level=Niveau
-longitude=Longitude
+longitude=Lengtegraad
 low_color_size=Low color / size
-low_size=Low size
+low_size=Lage maat
 manage_favorites=Manage favorites
 map=Map
 max=Max
@@ -137,7 +137,7 @@ min_max_people=Min/max people
 min_max_rainfall=Min/max rainfall
 min_max_value=Min/max value
 monthly=Maandelijks
-name=Name
+name=Naam
 next=Next
 nighttime_lights=Nachtelijke lichten
 no=Nee
@@ -157,7 +157,7 @@ open_last_table=Open last table
 openstreetmap=OpenStreetMap
 open_this_map_as_chart=Open this map as chart
 open_this_map_as_table=Open this map as table
-options=Options
+options=Opties
 organisation_unit=Organisatie\u00ebenheid
 organisation_unit_group_icons=Organisation unit group icons
 organisationunit_groupset=Organisation unit group set
@@ -167,8 +167,8 @@ osm_light=OSM Light
 overwrite=Overwrite
 overwrite_favorite=Overwrite favorite
 page=Page
-parent_unit=Parent unit
-period=Period
+parent_unit=Boveliggende eenheid
+period=Periode
 period_type=Soort periode
 phone_number=Phone number
 placement=Placement
@@ -176,28 +176,28 @@ please_create_map_first=Please create a map first
 please_enter_a_name=Please enter a name
 please_enter_map_title=Please enter a map title
 point_color=Point color
-point_radius=Point radius
+point_radius=Puntradius
 population_density=Population density
 precipitation=Neerslag
 predefined=Voorgedefinieerd
 previous=Previous
 program=Programma
-program_indicators=Program indicators
+program_indicators=Programmaindicators
 public_access=Publieke toegang
-quarterly=Quarterly
+quarterly=Driemaandelijks
 relative=Relatief
-relocate=Relocate
+relocate=Verplaats
 relocate_facility=Relocate facility
-remove=Remove
+remove=Verwijderen
 rename=Rename
 reporting_rates=Rapporteringsgraden
 revision=Revision
 search=Search
 search_for_favorites=Search for favorites
 search_for_user_groups=Search for user groups
-select=Select
+select=Selecteer
 select_groups=Selecteer groepen
-selection_mode=Selection mode
+selection_mode=Selectiemodus
 select_dataset=Select dataset
 select_layer=Select layer
 select_layer_from_google_earth_engine=Select layer from Google Earth Engine
@@ -214,29 +214,29 @@ select_year=Select year
 service_url=Service URL
 share=Share
 share_with_other_people=Share with others
-sharing_settings=Sharing settings
+sharing_settings=Instellingen voor delen
 show=Show
 show_circular_area=Show circular area with radius (m)
-show_information_sheet=Show information
+show_information_sheet=Toon informatie
 show_lon_lat=Toon lengtegraad/breedtegraad
-sixmonthly=Six-monthly
+sixmonthly=Zesmaandelijks
 sixmonthly_april=Zesmaandelijks april
-stage=Stage
+stage=Stadium
 start_date=Startdatum
-start_end_dates=Start/end dates
+start_end_dates=Start-/einddatums
 start_end_value=Start/end value
 stddev=Standaarddeviatie
-steps=Steps
+steps=Stappen
 style=Stijl
 sub_units=Sub-units
 sub_x2_units=Sub-x2-units
 sum=Som
-swap_lon_lat=Swap longitude/latitude
+swap_lon_lat=Wissel lengtegraad/breedtegraad
 symbol_layer=Facility layer
 table=Table
 temperature=Temperatuur
 text_filter=Text filter
-thematic_layer=Thematic layer
+thematic_layer=Thematische laag
 thematic_layer_1_legend=Thematic layer 1 legend
 thematic_layer_2_legend=Thematic layer 2 legend
 thematic_layer_3_legend=Thematic layer 3 legend
@@ -245,9 +245,9 @@ this_bimonth=This bi-month
 this_financial_year=Dit financieel jaar
 this_month=Deze maand
 this_quarter=Dit kwartier
-this_sixmonth=This six-month
+this_sixmonth=Dit halfjaar
 this_week=Deze week
-this_year=This year
+this_year=Dit jaar
 time_since_last_data_update=Elapsed time since last data update
 today=Vandaag
 totals=Totalen
@@ -261,17 +261,17 @@ user_sub_x2_units=User sub-x2-units
 value=Waarde
 value_type=Value type
 variance=Variantie
-version=Version
+version=Versie
 weekly=Wekelijks
-weekly_wednesday=Weekly (Start Wednesday)
+weekly_wednesday=Wekelijks (Start op woensdag)
 weekly_thursday=Wekelijks (Start op donderdag)
 weekly_saturday=Wekelijks (Start op zaterdag)
-weekly_sunday=Weekly (Start Sunday)
+weekly_sunday=Wekelijks (Start op zondag)
 write_interpretation=Write interpretation
 write_your_interpretation=Write your interpretation
 yearly=Jaarlijks
 yes=Ja
-yesterday=Yesterday
+yesterday=Gisteren
 you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
 you_do_not_have_access_to_all_items_in_this_favorite=You do not have access to all items in this favorite
 
