--- a/i18n/i18n_app_pt_BR.properties
+++ b/i18n/i18n_app_pt_BR.properties
@@ -1,6 +1,6 @@
 about=Acerca
 add_legend=Add legend
-add_new=Add new
+add_new=Adicionar novo
 address=Endere\u00e7o
 add_to_dashboard=Adicionar ao painel de instrumentos
 aggregation_type=Aggregation type
@@ -8,35 +8,35 @@ allow_external_access=Allow external access
 and_or_lower_than=And/or lower than
 attribution=Attribution
 automatic=Autom\u00e1tico
-average=Average
+average=M\u00e9dia
 bimonthly=Bimensal
-boundary_layer=Boundary layer
+boundary_layer=Camada limite
 by_data_element=By data element
-cancel=Cancel
+cancel=Cancelar
 can_edit_and_view=Consegue Editar e Visualizar
-can_view=Can view
-chart=Chart
+can_view=Consegue ver
+chart=Gr\u00e1fico
 classes_method=Classes / method
 clear=Limpar
 clear_map=Clear map
 clustering=Clustering
-code=Code
+code=C\u00f3digo
 color_scale=Color scale
 coordinate_field=Coordinate field
 coordinates=Coordenadas
 coordinates_could_not_be_loaded=Coordinates could not be loaded
-count=Count
-create=Create
+count=Contagem
+create=Criar
 created_by=Created by
 current_legends=Current legends
 daily=Di\u00e1rio
-data=Data
+data=Dados
 data_and_periods=Data and periods
-dataelement=Data element
+dataelement=Elemento de dado
 dataelement_group=Grupo de elemento de dado
-dataset=Data set
-delete=Delete
-delete_favorite=Delete favorite
+dataset=Conjunto de dados
+delete=Apagar
+delete_favorite=Excluir favorito
 details=Detalhes
 download=Baixar
 download_map_as_png=Download map as PNG
@@ -46,13 +46,13 @@ duplicate=Duplicado
 earthengine_layer=Google Earth Engine
 earth_engine_layer_legend=Google Earth Engine legend
 elevation=Elevation
-edit_layer=Edit layer
+edit_layer=Editar camadas
 edit_legend=Edit legend
-email=Email
+email=E-mail
 end_date=Data de t\u00e9rmino
 end_value_should_be_bigger_than_start_value=End value should be bigger than start value
 equal_counts=Equal counts
-equal_intervals=Equal intervals
+equal_intervals=Intervalos iguais
 event_data_item=Event data item
 event_data_items=Event data items
 event_layer=Event layer
@@ -60,7 +60,7 @@ event_location=Event location
 event_time=Event time
 external_layer=External layer
 external_layer_legend=External layer legend
-facility_layer=Facility layer
+facility_layer=Camada de US
 facility_layer_export_currently_not_supported=Facility layer export currently not supported
 facility_layer_legend=Facility layer legend
 favorite_name=Favorite name
@@ -75,39 +75,39 @@ google_hybrid=Google Hybrid
 google_streets=Google Streets
 go_to_charts=Go to charts
 go_to_pivot_tables=Go to pivot tables
-greater_than=Greater than
-group=Group
+greater_than=Maior do que
+group=Grupo
 group_nearby_events=Group nearby events
-groups=Groups
+groups=Grupos
 groupset=Conjunto do grupo
-has_no_orgunits=has no organisation units
+has_no_orgunits=n\u00e3o tem unidades organizacional
 high_color_size=High color / size
-highlight_color=Highlight color
+highlight_color=Realce as cores
 high_size=High size
-home=Home
-indicator=Indicator
+home=Origem
+indicator=Indicador
 indicator_group=Grupo do indicador
 information=Information
-infrastructural_data=Infrastructural data
+infrastructural_data=Dados de infra-estrutura
 invalid_parameter=Invalid parameter
 item_type=Item type
 landcover=Landcover
-last_2_sixmonths=Last 2 six-months
+last_2_sixmonths=\u00daltimo 2 seis-meses
 last_3_months=\u00daltimos 3 meses
-last_4_quarters=Last 4 quarters
+last_4_quarters=\u00daltimos 4 trimestres\u00daltimo 4 trimestre
 last_4_weeks=\u00daltimas 4 semanas
-last_5_financial_years=Last 5 financial years
+last_5_financial_years=\u00daltimos 5 anos financeiros
 last_6_bimonths=\u00daltimos 6 bi-meses
 last_6_months=\u00daltimos 6 meses
 last_12_months=\u00daltimos 12 meses
 last_12_weeks=\u00daltimoas 12 semanas
 last_52_weeks=Last 52 weeks
 last_bimonth=Last bi-month
-last_financial_year=Last financial year
-last_month=Last month
-last_quarter=Last quarter
-last_sixmonth=Last six-month
-last_week=Last week
+last_financial_year=\u00faltimo ano financeiro
+last_month=M\u00eas passado
+last_quarter=\u00daltimo trimestre
+last_sixmonth=\u00daltimos 6 meses
+last_week=\u00daltima semana
 last_5_years=\u00daltimos 5 anos
 last_year=Ano passado
 latitude=Latitude
@@ -116,19 +116,19 @@ layers=Layers
 layer_stack_transparency=Layer stack / opacity
 legend_name=Legend name
 legend_name_is_required=Legend name is required
-legends=Legends
+legends=Legendas
 legendset=Conjunto da legenda
 legend_sets_available=legend sets available
 legend_set_name=Legend set name
 legendsets=Legend sets
 legend_symbolizer=Symbolizer
-legend_type=Legend type
+legend_type=Tipo de legenda
 level=N\u00edvel
 longitude=Longitude
 low_color_size=Low color / size
 low_size=Low size
-manage_favorites=Manage favorites
-map=Map
+manage_favorites=Gerir favoritos
+map=Mapa
 max=M\u00e1x
 min=Min
 min_max_c=Min/max \u00b0C
@@ -137,8 +137,8 @@ min_max_people=Min/max people
 min_max_rainfall=Min/max rainfall
 min_max_value=Min/max value
 monthly=Mensal
-name=Name
-next=Next
+name=Nome
+next=Pr\u00f3ximo
 nighttime_lights=Nighttime lights
 no=nenhum
 no_groupset_selected=No group set selected
@@ -157,7 +157,7 @@ open_last_table=Open last table
 openstreetmap=OpenStreetMap
 open_this_map_as_chart=Open this map as chart
 open_this_map_as_table=Open this map as table
-options=Options
+options=Op\u00e7\u00f5es
 organisation_unit=Unidade organizacional
 organisation_unit_group_icons=Organisation unit group icons
 organisationunit_groupset=Conjunto de Grupo Unidade Organizacional
@@ -168,13 +168,13 @@ overwrite=Sobrescrever
 overwrite_favorite=Overwrite favorite
 page=Page
 parent_unit=Parent unit
-period=Period
+period=Per\u00edodo
 period_type=Tipo de per\u00edodo
 phone_number=N\u00famero de telefone
 placement=Placement
 please_create_map_first=Please create a map first
 please_enter_a_name=Por favor, indique um nome
-please_enter_map_title=Please enter a map title
+please_enter_map_title=Digite um t\u00edtulo do mapa
 point_color=Point color
 point_radius=Point radius
 population_density=Population density
@@ -184,18 +184,18 @@ previous=Previous
 program=Programa
 program_indicators=Program indicators
 public_access=Public access
-quarterly=Quarterly
+quarterly=Trimestral
 relative=Relativo
-relocate=Relocate
+relocate=Realocar
 relocate_facility=Relocate facility
-remove=Remove
-rename=Rename
+remove=Remover
+rename=Renomear
 reporting_rates=Taxas de relat\u00f3rio
 revision=Revision
-search=Search
+search=Pesquisar
 search_for_favorites=Search for favorites
-search_for_user_groups=Search for user groups
-select=Select
+search_for_user_groups=Pesquisar por grupos de utilizadores
+select=Seleccione
 select_groups=Select groups
 selection_mode=Selection mode
 select_dataset=Select dataset
@@ -205,25 +205,25 @@ select_levels=Select levels
 select_organisation_unit_groups=Select organisation unit groups
 select_organisation_unit_levels=Select organisation unit levels
 select_organisation_units=Select organisation units
-select_period=Select period
-select_program=Select program
+select_period=Seleccione o per\u00edodo
+select_program=Seleccione Programa
 select_service=Select service
 select_stage=Select stage
 select_sub_units=Select sub-units
 select_year=Select year
 service_url=Service URL
-share=Share
+share=Partilhar
 share_with_other_people=Share with others
-sharing_settings=Sharing settings
+sharing_settings=Defini\u00e7\u00f5es de partilha
 show=Mostrar
 show_circular_area=Show circular area with radius (m)
-show_information_sheet=Show information
+show_information_sheet=Mostrar folha de informa\u00e7\u00e3o
 show_lon_lat=Show longitude/latitude
-sixmonthly=Six-monthly
+sixmonthly=Semestral
 sixmonthly_april=Six-monthly April
 stage=Stage
 start_date=Data de in\u00edcio
-start_end_dates=Start/end dates
+start_end_dates=Datas Iniciar-fim
 start_end_value=Start/end value
 stddev=Standard deviation
 steps=Steps
@@ -232,11 +232,11 @@ sub_units=Sub-units
 sub_x2_units=Sub-x2-units
 sum=Soma
 swap_lon_lat=Swap longitude/latitude
-symbol_layer=Facility layer
+symbol_layer=Camada de US
 table=Table
 temperature=Temperature
-text_filter=Text filter
-thematic_layer=Thematic layer
+text_filter=Filtro do texto
+thematic_layer=Camada tem\u00e1tica
 thematic_layer_1_legend=Thematic layer 1 legend
 thematic_layer_2_legend=Thematic layer 2 legend
 thematic_layer_3_legend=Thematic layer 3 legend
@@ -247,7 +247,7 @@ this_month=This month
 this_quarter=This quarter
 this_sixmonth=This six-month
 this_week=This week
-this_year=This year
+this_year=Este ano
 time_since_last_data_update=Elapsed time since last data update
 today=Hoje
 totals=Totais
@@ -259,9 +259,9 @@ user_ou=User OU
 user_sub_units=User sub-units
 user_sub_x2_units=User sub-x2-units
 value=Valor
-value_type=Value type
+value_type=Tipo de valor
 variance=Variance
-version=Version
+version=Vers\u00e3o
 weekly=Semanal
 weekly_wednesday=Weekly (Start Wednesday)
 weekly_thursday=Weekly (Start Thursday)
@@ -271,7 +271,7 @@ write_interpretation=Write interpretation
 write_your_interpretation=Write your interpretation
 yearly=Anual
 yes=Sim
-yesterday=Yesterday
+yesterday=Ont\u00e9m
 you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
 you_do_not_have_access_to_all_items_in_this_favorite=You do not have access to all items in this favorite
 
