--- a/i18n/i18n_app_sv.properties
+++ b/i18n/i18n_app_sv.properties
@@ -1,113 +1,113 @@
 about=Handla om
 add_legend=L\u00e4gg till symbolf\u00f6rklaring
-add_new=Add new
+add_new=L\u00e4gg till ny
 address=Adress
 add_to_dashboard=L\u00e4gg till \u00f6versikten
 aggregation_type=Aggregationtyp
 allow_external_access=Till\u00e5t extern \u00e5tkomst
-and_or_lower_than=And/or lower than
+and_or_lower_than=Och / eller l\u00e4gre \u00e4n
 attribution=Attribution
 automatic=Automatisk
-average=Average
+average=Genomsnitt
 bimonthly=varannan m\u00e5nad
-boundary_layer=Boundary layer
+boundary_layer=Gr\u00e4nsskikt
 by_data_element=Per dataelement
-cancel=Cancel
+cancel=Avbryt
 can_edit_and_view=Kan redigera och visa
-can_view=Can view
-chart=Chart
+can_view=kan visa
+chart=Diagram
 classes_method=Klasser / metod
 clear=Klar
 clear_map=Rensa karta
 clustering=Clustering
-code=Code
+code=Koda
 color_scale=F\u00e4rgskala
 coordinate_field=Coordinate field
 coordinates=koordinater
 coordinates_could_not_be_loaded=Koordinater kunde inte laddas
-count=Count
-create=Create
-created_by=Created by
-current_legends=Current legends
+count=R\u00e4kna
+create=Skapa
+created_by=Skapad av
+current_legends=nuvarande legends
 daily=Dagligen
 data=Data
-data_and_periods=Data and periods
-dataelement=Data element
+data_and_periods=Data och perioder
+dataelement=Uppgift
 dataelement_group=Dataelementgrupp
-dataset=Data set
-delete=Delete
-delete_favorite=Delete favorite
+dataset=datam\u00e4ngd
+delete=Radera
+delete_favorite=Radera favorit
 details=detaljer
 download=Ladda ner
-download_map_as_png=Download map as PNG
-drill_down_one_level=Drill down one level
+download_map_as_png=Ladda ner kartan som PNG
+drill_down_one_level=Visa detaljer i nedre niv\u00e5
 drill_up_one_level=Flytta upp en niv\u00e5
 duplicate=Duplicera
 earthengine_layer=Google Earht Engine
 earth_engine_layer_legend=Google Earth Engine symbolf\u00f6rklaring
 elevation=H\u00f6jd
-edit_layer=Edit layer
-edit_legend=Edit legend
-email=Email
+edit_layer=Redigera skikt
+edit_legend=redigera legend
+email=E-post
 end_date=Slutdatum
 end_value_should_be_bigger_than_start_value=Slutv\u00e4rde b\u00f6r vara st\u00f6rre \u00e4n startv\u00e4rdet
 equal_counts=lika r\u00e4knas
-equal_intervals=Equal intervals
+equal_intervals=J\u00e4mnt intervall
 event_data_item=h\u00e4ndelsedata post
 event_data_items=H\u00e4ndelsedataposter
-event_layer=Event layer
+event_layer=h\u00e4ndelse skikt
 event_location=Event location
 event_time=Event time
 external_layer=Extern skikt
 external_layer_legend=Extern skikt symbolf\u00f6rklaring
-facility_layer=Facility layer
+facility_layer=facility_layer! Facility skiktet
 facility_layer_export_currently_not_supported=Facility skiktet export f\u00f6r n\u00e4rvarande inte
-facility_layer_legend=Facility layer legend
+facility_layer_legend=Anl\u00e4ggning skiktet legend
 favorite_name=Favoritnamn
 favorite_outdated_create_new=Favorit \u00e4r f\u00f6r\u00e5ldrad - du skapa en ny
 favorites=Favoriter
 filter=Filtrera
-filter_by_value=Filter by value
+filter_by_value=Filtrera efter v\u00e4rde
 financial_april=Budget\u00e5r - April
 financial_july=Budget\u00e5r - Juli
-financial_oct=Financial year (Start October)
+financial_oct=Budget\u00e5r - Oktober
 google_hybrid=Google Hybrid
 google_streets=Google Streets
 go_to_charts=G\u00e5 till diagram
-go_to_pivot_tables=Go to pivot tables
-greater_than=Greater than
+go_to_pivot_tables=G\u00e5 till pivottabeller
+greater_than=St\u00f6rre \u00e4n
 group=Group
 group_nearby_events=Group nearby events
-groups=Groups
+groups=Grupper
 groupset=Grupp set
-has_no_orgunits=has no organisation units
-high_color_size=High color / size
-highlight_color=Highlight color
-high_size=High size
-home=Home
-indicator=Indicator
+has_no_orgunits=har inga organisationsenheter
+high_color_size=H\u00f6g f\u00e4rg / storlek
+highlight_color=Markeringsf\u00e4rg
+high_size=h\u00f6g storlek
+home=Hem
+indicator=Indikator
 indicator_group=Indikatorgrupp
 information=Information
-infrastructural_data=Infrastructural data
+infrastructural_data=Data om infrastruktur
 invalid_parameter=Ogiltiga koordinater
 item_type=Item type
 landcover=Landcover
-last_2_sixmonths=Last 2 six-months
+last_2_sixmonths=Senaste 2 sex m\u00e5nader
 last_3_months=Senaste 3 m\u00e5naderna
-last_4_quarters=Last 4 quarters
+last_4_quarters=Senaste 4 kvartal
 last_4_weeks=Senaste 4 veckorna
-last_5_financial_years=Last 5 financial years
+last_5_financial_years=Senaste 5 r\u00e4kenskaps\u00e5ren
 last_6_bimonths=Senaste 6 bi-m\u00e5nader
 last_6_months=Senaste 6 m\u00e5naderna
 last_12_months=Senaste 12 m\u00e5naderna
 last_12_weeks=Senast 12 veckor
-last_52_weeks=Last 52 weeks
-last_bimonth=Last bi-month
-last_financial_year=Last financial year
-last_month=Last month
-last_quarter=Last quarter
-last_sixmonth=Last six-month
-last_week=Last week
+last_52_weeks=Senast 52 veckor
+last_bimonth=Senast bi m\u00e5nad
+last_financial_year=F\u00f6reg\u00e5ende r\u00e4kenskaps\u00e5r
+last_month=F\u00f6rra m\u00e5naden
+last_quarter=F\u00f6rra kvartalet
+last_sixmonth=Senast sex m\u00e5nader
+last_week=F\u00f6rra veckan
 last_5_years=Senaste 5 \u00e5r
 last_year=F\u00f6rra \u00e5ret
 latitude=Latitud
@@ -116,7 +116,7 @@ layers=Skikt
 layer_stack_transparency=Skikt / opacitet
 legend_name=Legend namn
 legend_name_is_required=Legend namn kr\u00e4vs
-legends=Legends
+legends=Teckenf\u00f6rklaringar
 legendset=Symbolf\u00f6rklaring set
 legend_sets_available=symbolf\u00f6rklaringar tillg\u00e4ngliga
 legend_set_name=Legend set namn
@@ -124,21 +124,21 @@ legendsets=legend upps\u00e4ttningar
 legend_symbolizer=Symbolizer
 legend_type=Typ av symbolf\u00f6rklaring
 level=Niv\u00e5
-longitude=Longitude
-low_color_size=Low color / size
-low_size=Low size
-manage_favorites=Manage favorites
-map=Map
+longitude=Longitud
+low_color_size=L\u00e5g f\u00e4rg / storlek
+low_size=liten storlek
+manage_favorites=Hantera favoriter
+map=Karta
 max=max
-min=Min
+min=min
 min_max_c=Min/max \u00b0C
-min_max_elevation=Min/max elevation
+min_max_elevation=Min/max h\u00f6jd
 min_max_people=Min/max personner
 min_max_rainfall=Min/max nederb\u00f6rd
 min_max_value=Min/max v\u00e4rde
 monthly=En g\u00e5ng i m\u00e5naden
-name=Name
-next=Next
+name=Namn
+next=N\u00e4sta
 nighttime_lights=Nattliga ljus
 no=Nej
 no_groupset_selected=Ingen grupp set vald
@@ -146,35 +146,35 @@ no_map_to_save=Ingen kartan f\u00f6r att spara
 none=Ingen
 no_event_coordinates_found=Inga h\u00e4ndelse koordinater hittades
 no_organisation_unit_levels=Ingen organisation enhets niv\u00e5er
-no_organisation_units_specified=No organisation units specified
-no_period_selected=No period selected
+no_organisation_units_specified=Ingen organisationsenheter tilldelade
+no_period_selected=Ingen valda perioden
 no_program_stage_selected=Ingen programsked vald
 no_selected_items=Inga markerade objekt
 no_system_info_found=Systeminformation hittades inte
-no_valid_coordinates_found=No valid coordinates found
+no_valid_coordinates_found=Inga giltiga koordinater hittades
 open_last_chart=\u00d6ppen sista diagrammet
-open_last_table=Open last table
+open_last_table=\u00d6ppna sista tabellen
 openstreetmap=OpenStreetMap
-open_this_map_as_chart=Open this map as chart
+open_this_map_as_chart=\u00d6ppna denna karta som diagram
 open_this_map_as_table=\u00d6ppna denna karta som bords
-options=Options
+options=Alternativ
 organisation_unit=Organisationsenhet
 organisation_unit_group_icons=Organisation enheten grupperar ikoner
 organisationunit_groupset=Organisation apparatgrupp upps\u00e4ttning
 organisation_units=Organisation enheter
 organisationunit_search=Organisation enheten s\u00f6kning
-osm_light=OSM Light
+osm_light=OSM Ljus
 overwrite=Skriva \u00f6ver
-overwrite_favorite=Overwrite favorite
-page=Page
-parent_unit=Parent unit
+overwrite_favorite=Skriv \u00f6ver favorit
+page=Sida
+parent_unit=f\u00f6r\u00e4ldraenheten
 period=Period
 period_type=Periodtyp
 phone_number=Telefonnummer
-placement=Placement
-please_create_map_first=Please create a map first
+placement=Placering
+please_create_map_first=Skapa en karta f\u00f6rst
 please_enter_a_name=Ange ett namn
-please_enter_map_title=Please enter a map title
+please_enter_map_title=Ange en karta titel
 point_color=Point color
 point_radius=Point radius
 population_density=Befolkningst\u00e4thet
@@ -182,84 +182,84 @@ precipitation=Nederb\u00f6rd
 predefined=F\u00f6rdefinierad
 previous=Tidigare
 program=Program
-program_indicators=Program indicators
+program_indicators=programindikatorer
 public_access=allm\u00e4nhetens tillg\u00e5ng
-quarterly=Quarterly
+quarterly=Kvartals
 relative=Relativ
-relocate=Relocate
+relocate=F\u00f6rflytta
 relocate_facility=flytta anl\u00e4ggningen
-remove=Remove
-rename=Rename
+remove=Avl\u00e4gsna
+rename=D\u00f6pa om
 reporting_rates=rapporterings~~POS\=TRUNC priser
 revision=Revision
-search=Search
-search_for_favorites=Search for favorites
-search_for_user_groups=Search for user groups
-select=Select
+search=S\u00f6k
+search_for_favorites=S\u00f6k efter favoriter
+search_for_user_groups=S\u00f6k efter anv\u00e4ndargrupper
+select=Markera
 select_groups=V\u00e4lj grupper
-selection_mode=Selection mode
+selection_mode=vall\u00e4get
 select_dataset=V\u00e4lj dataset
 select_layer=V\u00e4lj skikt
-select_layer_from_google_earth_engine=Select layer from Google Earth Engine
+select_layer_from_google_earth_engine=V\u00e4lj skikt fr\u00e5n Google Earth Engine
 select_levels=v\u00e4ljer niv\u00e5er
-select_organisation_unit_groups=Select organisation unit groups
-select_organisation_unit_levels=Select organisation unit levels
+select_organisation_unit_groups=V\u00e4lj organisationsenhet grupper
+select_organisation_unit_levels=V\u00e4lj organisationsenhet niv\u00e5er
 select_organisation_units=V\u00e4lj organisationsenheter
-select_period=Select period
-select_program=Select program
+select_period=V\u00e4lj period
+select_program=V\u00e4lj program
 select_service=V\u00e4lj tj\u00e4nst
-select_stage=Select stage
+select_stage=V\u00e4lj skede
 select_sub_units=V\u00e4lj underenheter
-select_year=Select year
+select_year=V\u00e4lj \u00e5r
 service_url=Tj\u00e4nstwebbadress
-share=Share
+share=Dela med sig
 share_with_other_people=Dela med andra
-sharing_settings=Sharing settings
+sharing_settings=Delningsinst\u00e4llningar inst\u00e4llningar~~POS\=HEADCOMP
 show=Visa
 show_circular_area=Visa cirkul\u00e4rt omr\u00e5de med radien (m)
-show_information_sheet=Show information
+show_information_sheet=Visa information
 show_lon_lat=Visa longitud / latitud
-sixmonthly=Six-monthly
+sixmonthly=Halv\u00e5rs
 sixmonthly_april=Halv\u00e5rs April
-stage=Stage
+stage=Skede
 start_date=Start datum
-start_end_dates=Start/end dates
-start_end_value=Start/end value
+start_end_dates=Start/slutdatum
+start_end_value=Start / slutv\u00e4rdet
 stddev=Standardavvikelse
-steps=Steps
+steps=Steg
 style=Stil
-sub_units=Sub-units
+sub_units=Underenheter
 sub_x2_units=Sub-x2-enheter
 sum=Belopp
-swap_lon_lat=Swap longitude/latitude
-symbol_layer=Facility layer
-table=Table
+swap_lon_lat=Byta longitud / latitud
+symbol_layer=facility_layer! Facility skiktet
+table=Tabell
 temperature=Temperatur
-text_filter=Text filter
-thematic_layer=Thematic layer
-thematic_layer_1_legend=Thematic layer 1 legend
+text_filter=textfilter
+thematic_layer=Tematisk lager
+thematic_layer_1_legend=Tematisk skiktet en legend
 thematic_layer_2_legend=Tematiska skikt 2 legend
-thematic_layer_3_legend=Thematic layer 3 legend
-thematic_layer_4_legend=Thematic layer 4 legend
+thematic_layer_3_legend=Tematisk skiktet 3 legend
+thematic_layer_4_legend=Tematisk skiktet 4 legend
 this_bimonth=Denna bi-m\u00e5naders
 this_financial_year=Detta r\u00e4kenskaps\u00e5r
 this_month=Den h\u00e4r m\u00e5naden
 this_quarter=detta kvartal
-this_sixmonth=This six-month
+this_sixmonth=Denna sexm\u00e5naders
 this_week=Denna vecka
-this_year=This year
+this_year=Det h\u00e4r \u00e5ret
 time_since_last_data_update=Tid sedan senaste datauppdatering
 today=Today
 totals=Totals
 update=Uppdatera
 username=Anv\u00e4ndarnamn
-user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
+user_is_not_assigned_to_any_organisation_units=Anv\u00e4ndare har ingen organisation enheter
 user_organisation_unit=Anv\u00e4ndare organisation enheter
-user_ou=User OU
-user_sub_units=User sub-units
-user_sub_x2_units=User sub-x2-units
+user_ou=anv\u00e4ndaren OU
+user_sub_units=Anv\u00e4ndarunderenheter
+user_sub_x2_units=Anv\u00e4ndarunder x2-enheter
 value=V\u00e4rde
-value_type=Value type
+value_type=V\u00e4rde typ
 variance=Variation
 version=Version
 weekly=Varje vecka
@@ -267,11 +267,11 @@ weekly_wednesday=Weekly (Start Wednesday)
 weekly_thursday=Weekly (Start Thursday)
 weekly_saturday=Weekly (Start Saturday)
 weekly_sunday=Weekly (Start Sunday)
-write_interpretation=Write interpretation
+write_interpretation=skriv tolkning
 write_your_interpretation=Skriv din tolkning
 yearly=\u00c5rlig
 yes=Ja
 yesterday=Yesterday
-you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
+you_can_not_select_organisation_units_below_the_selected_level=Du kan inte v\u00e4lja organisationsenheter under den valda niv\u00e5n
 you_do_not_have_access_to_all_items_in_this_favorite=Du beh\u00f6ver inte ha tillg\u00e5ng till alla artiklar i denna favorit
 
