--- a/i18n/i18n_app_ar_IQ.properties
+++ b/i18n/i18n_app_ar_IQ.properties
@@ -1,6 +1,6 @@
 about=\u062d\u0648\u0644
 add_legend=Add legend
-add_new=Add new
+add_new=\u0625\u0636\u0627\u0641\u0629 \u062c\u062f\u064a\u062f
 address=Address
 add_to_dashboard=Add to dashboard
 aggregation_type=\u0646\u0648\u0639 \u0627\u0644\u062a\u062c\u0645\u064a\u0639
@@ -8,14 +8,14 @@ allow_external_access=\u0627\u0644\u0633\u0645\u0627\u062d \u0628\u0627\u0644\u0
 and_or_lower_than=And/or lower than
 attribution=Attribution
 automatic=Automatic
-average=Average
+average=\u0627\u0644\u0645\u062a\u0648\u0633\u0637
 bimonthly=\u0623\u0634\u0647\u0631 \u0645\u0632\u062f\u0648\u062c\u0629
 boundary_layer=Boundary layer
 by_data_element=\u0628\u0648\u0627\u0633\u0637\u0629 \u0639\u0646\u0635\u0631 \u0627\u0644\u0628\u064a\u0627\u0646\u0627\u062a
-cancel=Cancel
+cancel=\u0625\u0644\u063a\u0627\u0621
 can_edit_and_view=\u0625\u0645\u0643\u0627\u0646\u064a\u0629 \u0627\u0644\u062a\u0639\u062f\u064a\u0644 \u0648\u0627\u0644\u0627\u0633\u062a\u0639\u0631\u0627\u0636
-can_view=Can view
-chart=Chart
+can_view=\u0625\u0645\u0643\u0627\u0646\u064a\u0629 \u0627\u0644\u0627\u0633\u062a\u0639\u0631\u0627\u0636
+chart=\u0627\u0644\u0645\u062e\u0637\u0637 \u0627\u0644\u0628\u064a\u0627\u0646\u064a
 classes_method=Classes / method
 clear=\u0645\u0633\u062d
 clear_map=Clear map
@@ -25,18 +25,18 @@ color_scale=Color scale
 coordinate_field=Coordinate field
 coordinates=Coordinates
 coordinates_could_not_be_loaded=Coordinates could not be loaded
-count=Count
-create=Create
-created_by=Created by
+count=\u0627\u0644\u0639\u062f\u062f
+create=\u0625\u0646\u0634\u0627\u0621
+created_by=\u062a\u0645 \u0627\u0644\u0625\u0646\u0634\u0627\u0621 \u0628\u0648\u0627\u0633\u0637\u0629
 current_legends=Current legends
-daily=Daily
-data=Data
+daily=\u064a\u0648\u0645\u064a
+data=\u0627\u0644\u0628\u064a\u0627\u0646\u0627\u062a
 data_and_periods=Data and periods
 dataelement=Data element
 dataelement_group=Data element group
 dataset=Data set
-delete=Delete
-delete_favorite=Delete favorite
+delete=\u062d\u0630\u0641
+delete_favorite=\u062d\u0630\u0641 \u0627\u0644\u0645\u0641\u0636\u0644\u0629
 details=\u0627\u0644\u062a\u0641\u0627\u0635\u064a\u0644
 download=\u062a\u0646\u0632\u064a\u0644
 download_map_as_png=Download map as PNG
@@ -70,13 +70,13 @@ filter=Filter
 filter_by_value=Filter by value
 financial_april=\u0627\u0644\u0633\u0646\u0629 \u0627\u0644\u0645\u0627\u0644\u064a\u0629 (\u0628\u062f\u0627\u064a\u0629 \u0646\u064a\u0633\u0627\u0646)
 financial_july=\u0627\u0644\u0633\u0646\u0629 \u0627\u0644\u0645\u0627\u0644\u064a\u0629 (\u0628\u062f\u0627\u064a\u0629 \u062a\u0645\u0648\u0632)
-financial_oct=Financial year (Start October)
+financial_oct=\u0627\u0644\u0633\u0646\u0629 \u0627\u0644\u0645\u0627\u0644\u064a\u0629 (\u0628\u062f\u0627\u064a\u0629 \u062a\u0634\u0631\u064a\u0646 \u0627\u0644\u0623\u0648\u0644)
 google_hybrid=Google Hybrid
 google_streets=Google Streets
 go_to_charts=Go to charts
 go_to_pivot_tables=Go to pivot tables
 greater_than=Greater than
-group=Group
+group=\u0627\u0644\u0645\u062c\u0645\u0648\u0639\u0629
 group_nearby_events=Group nearby events
 groups=Groups
 groupset=Group set
@@ -84,7 +84,7 @@ has_no_orgunits=has no organisation units
 high_color_size=High color / size
 highlight_color=Highlight color
 high_size=High size
-home=Home
+home=\u0627\u0644\u0631\u0626\u064a\u0633\u064a\u0629
 indicator=Indicator
 indicator_group=Indicator group
 information=Information
@@ -92,23 +92,23 @@ infrastructural_data=Infrastructural data
 invalid_parameter=Invalid parameter
 item_type=Item type
 landcover=Landcover
-last_2_sixmonths=Last 2 six-months
+last_2_sixmonths=\u0622\u062e\u0631 2 \u0633\u062a\u0629 \u0623\u0634\u0647\u0631
 last_3_months=\u0622\u062e\u0631 3 \u0623\u0634\u0647\u0631
-last_4_quarters=Last 4 quarters
+last_4_quarters=\u0622\u062e\u0631 4 \u0623\u0631\u0628\u0627\u0639 \u0627\u0644\u0633\u0646\u0629
 last_4_weeks=\u0622\u062e\u0631 4 \u0623\u0633\u0627\u0628\u064a\u0639
-last_5_financial_years=Last 5 financial years
+last_5_financial_years=\u0622\u062e\u0631 5 \u0633\u0646\u0648\u0627\u062a \u0645\u0627\u0644\u064a\u0629
 last_6_bimonths=\u0622\u062e\u0631 6 \u0623\u0634\u0647\u0631 \u0645\u0632\u062f\u0648\u062c\u0629
 last_6_months=\u0622\u062e\u0631 6 \u0623\u0634\u0647\u0631
 last_12_months=\u0622\u062e\u0631 12 \u0634\u0647\u0631
 last_12_weeks=\u0622\u062e\u0631 12 \u0623\u0633\u0628\u0648\u0639
-last_52_weeks=Last 52 weeks
-last_bimonth=Last bi-month
-last_financial_year=Last financial year
-last_month=Last month
-last_quarter=Last quarter
-last_sixmonth=Last six-month
-last_week=Last week
-last_5_years=Last 5 years
+last_52_weeks=\u0622\u062e\u0631 52 \u0623\u0633\u0628\u0648\u0639
+last_bimonth=\u0622\u062e\u0631 \u0634\u0647\u0631\u064a\u0646 \u0645\u0632\u062f\u0648\u062c\u064a\u0646
+last_financial_year=\u0627\u0644\u0633\u0646\u0629 \u0627\u0644\u0645\u0627\u0644\u064a\u0629 \u0627\u0644\u0645\u0627\u0636\u064a\u0629
+last_month=\u0627\u0644\u0634\u0647\u0631 \u0627\u0644\u0645\u0627\u0636\u064a
+last_quarter=\u0631\u0628\u0639 \u0627\u0644\u0633\u0646\u0629 \u0627\u0644\u0645\u0627\u0636\u064a
+last_sixmonth=\u0622\u062e\u0631 \u0633\u062a\u0629 \u0623\u0634\u0647\u0631
+last_week=\u0627\u0644\u0623\u0633\u0628\u0648\u0639 \u0627\u0644\u0645\u0627\u0636\u064a
+last_5_years=\u0622\u062e\u0631 5 \u0633\u0646\u0648\u0627\u062a
 last_year=\u0627\u0644\u0633\u0646\u0629 \u0627\u0644\u0645\u0627\u0636\u064a\u0629
 latitude=Latitude
 layer=Layer
@@ -127,18 +127,18 @@ level=Level
 longitude=Longitude
 low_color_size=Low color / size
 low_size=Low size
-manage_favorites=Manage favorites
-map=Map
+manage_favorites=\u0625\u062f\u0627\u0631\u0629 \u0627\u0644\u0645\u0641\u0636\u0644\u0627\u062a
+map=\u0627\u0644\u062e\u0631\u064a\u0637\u0629
 max=\u0627\u0644\u0623\u0639\u0644\u0649
-min=Min
+min=\u0627\u0644\u0623\u062f\u0646\u0649
 min_max_c=Min/max \u00b0C
 min_max_elevation=Min/max elevation
 min_max_people=Min/max people
 min_max_rainfall=Min/max rainfall
 min_max_value=Min/max value
 monthly=\u0634\u0647\u0631\u064a
-name=Name
-next=Next
+name=\u0627\u0644\u0627\u0633\u0645
+next=\u0627\u0644\u062a\u0627\u0644\u064a
 nighttime_lights=Nighttime lights
 no=\u0644\u0627
 no_groupset_selected=No group set selected
@@ -152,12 +152,12 @@ no_program_stage_selected=No program stage selected
 no_selected_items=No selected items
 no_system_info_found=No system info found
 no_valid_coordinates_found=No valid coordinates found
-open_last_chart=Open last chart
+open_last_chart=\u0641\u062a\u062d \u0622\u062e\u0631 \u0645\u062e\u0637\u0637 \u0628\u0628\u0627\u0646\u064a
 open_last_table=Open last table
 openstreetmap=OpenStreetMap
 open_this_map_as_chart=Open this map as chart
 open_this_map_as_table=Open this map as table
-options=Options
+options=\u0627\u0644\u062e\u064a\u0627\u0631\u0627\u062a
 organisation_unit=\u0627\u0644\u0648\u062d\u062f\u0629 \u0627\u0644\u062a\u0646\u0638\u064a\u0645\u064a\u0629
 organisation_unit_group_icons=Organisation unit group icons
 organisationunit_groupset=Organisation unit group set
@@ -165,7 +165,7 @@ organisation_units=\u0627\u0644\u0648\u062d\u062f\u0627\u062a \u0627\u0644\u062a
 organisationunit_search=Organisation unit search
 osm_light=OSM Light
 overwrite=\u0627\u0633\u062a\u0628\u062f\u0627\u0644
-overwrite_favorite=Overwrite favorite
+overwrite_favorite=\u0627\u0633\u062a\u0628\u062f\u0627\u0644 \u0627\u0644\u0645\u0641\u0636\u0644\u0629
 page=Page
 parent_unit=Parent unit
 period=Period
@@ -184,42 +184,42 @@ previous=Previous
 program=\u0627\u0644\u0628\u0631\u0646\u0627\u0645\u062c
 program_indicators=Program indicators
 public_access=\u0635\u0644\u0627\u062d\u064a\u0629 \u0627\u0644\u0648\u0635\u0648\u0644 \u0644\u0644\u0639\u0645\u0648\u0645
-quarterly=Quarterly
+quarterly=\u0631\u0628\u0639 \u0633\u0646\u0648\u064a
 relative=Relative
 relocate=Relocate
 relocate_facility=Relocate facility
-remove=Remove
-rename=Rename
+remove=\u0625\u0632\u0627\u0644\u0629
+rename=\u0625\u0639\u0627\u062f\u0629 \u0627\u0644\u062a\u0633\u0645\u064a\u0629
 reporting_rates=\u0645\u0639\u062f\u0644\u0627\u062a \u0625\u0639\u062f\u0627\u062f \u0627\u0644\u062a\u0642\u0627\u0631\u064a\u0631
-revision=Revision
-search=Search
-search_for_favorites=Search for favorites
+revision=\u0627\u0644\u0645\u0631\u0627\u062c\u0639\u0629
+search=\u0627\u0644\u0628\u062d\u062b
+search_for_favorites=\u0627\u0644\u0628\u062d\u062b \u0639\u0646 \u0627\u0644\u0645\u0641\u0636\u0644\u0627\u062a
 search_for_user_groups=Search for user groups
-select=Select
+select=\u062a\u062d\u062f\u064a\u062f
 select_groups=Select groups
 selection_mode=Selection mode
 select_dataset=Select dataset
 select_layer=Select layer
 select_layer_from_google_earth_engine=Select layer from Google Earth Engine
 select_levels=Select levels
-select_organisation_unit_groups=Select organisation unit groups
-select_organisation_unit_levels=Select organisation unit levels
+select_organisation_unit_groups=\u062a\u062d\u062f\u064a\u062f \u0645\u062c\u0645\u0648\u0639\u0627\u062a \u0627\u0644\u0648\u062d\u062f\u0627\u062a \u0627\u0644\u062a\u0646\u0638\u064a\u0645\u064a\u0629
+select_organisation_unit_levels=\u062a\u062d\u062f\u064a\u062f \u0645\u0633\u062a\u0648\u064a\u0627\u062a \u0627\u0644\u0648\u062d\u062f\u0629 \u0627\u0644\u062a\u0646\u0638\u064a\u0645\u064a\u0629
 select_organisation_units=\u062a\u062d\u062f\u064a\u062f \u0627\u0644\u0648\u062d\u062f\u0627\u062a \u0627\u0644\u062a\u0646\u0638\u064a\u0645\u064a\u0629
 select_period=Select period
-select_program=Select program
+select_program=\u062a\u062d\u062f\u064a\u062f \u0627\u0644\u0628\u0631\u0646\u0627\u0645\u062c
 select_service=Select service
 select_stage=Select stage
 select_sub_units=\u062a\u062d\u062f\u064a\u062f \u0627\u0644\u0648\u062d\u062f\u0627\u062a \u0627\u0644\u0641\u0631\u0639\u064a\u0629
 select_year=Select year
 service_url=Service URL
-share=Share
+share=\u0645\u0634\u0627\u0631\u0643\u0629
 share_with_other_people=Share with others
-sharing_settings=Sharing settings
+sharing_settings=\u0625\u0639\u062f\u0627\u062f\u0627\u062a \u0627\u0644\u0645\u0634\u0627\u0631\u0643\u0629
 show=Show
 show_circular_area=Show circular area with radius (m)
 show_information_sheet=Show information
 show_lon_lat=Show longitude/latitude
-sixmonthly=Six-monthly
+sixmonthly=\u0633\u062a\u0629 \u0623\u0634\u0647\u0631
 sixmonthly_april=\u0633\u062a\u0629 \u0623\u0634\u0647\u0631 \u0646\u064a\u0633\u0627\u0646
 stage=Stage
 start_date=Start date
@@ -227,13 +227,13 @@ start_end_dates=Start/end dates
 start_end_value=Start/end value
 stddev=Standard deviation
 steps=Steps
-style=Style
+style=\u0627\u0644\u0645\u0638\u0647\u0631
 sub_units=Sub-units
 sub_x2_units=Sub-x2-units
 sum=\u0627\u0644\u0645\u062c\u0645\u0648\u0639
 swap_lon_lat=Swap longitude/latitude
 symbol_layer=Facility layer
-table=Table
+table=\u0627\u0644\u062c\u062f\u0648\u0644
 temperature=Temperature
 text_filter=Text filter
 thematic_layer=Thematic layer
@@ -245,33 +245,33 @@ this_bimonth=\u0627\u0644\u0634\u0647\u0631\u0627\u0646 \u0627\u0644\u0645\u0632
 this_financial_year=\u0627\u0644\u0633\u0646\u0629 \u0627\u0644\u0645\u0627\u0644\u064a\u0629 \u0627\u0644\u062d\u0627\u0644\u064a\u0629
 this_month=\u0627\u0644\u0634\u0647\u0631 \u0627\u0644\u062d\u0627\u0644\u064a
 this_quarter=\u0631\u0628\u0639 \u0627\u0644\u0633\u0646\u0629 \u0627\u0644\u062d\u0627\u0644\u064a
-this_sixmonth=This six-month
+this_sixmonth=\u0646\u0635\u0641 \u0627\u0644\u0633\u0646\u0629 \u0627\u0644\u062d\u0627\u0644\u064a (\u0641\u062a\u0631\u0629 \u0645\u0646 \u0633\u062a\u0629 \u0623\u0634\u0647\u0631)
 this_week=\u0627\u0644\u0623\u0633\u0628\u0648\u0639 \u0627\u0644\u062d\u0627\u0644\u064a
-this_year=This year
+this_year=\u0627\u0644\u0633\u0646\u0629 \u0627\u0644\u062d\u0627\u0644\u064a\u0629
 time_since_last_data_update=Elapsed time since last data update
 today=\u0627\u0644\u064a\u0648\u0645
 totals=\u0627\u0644\u0625\u062c\u0645\u0627\u0644\u064a\u0627\u062a
 update=\u062a\u062d\u062f\u064a\u062b
-username=Username
+username=\u0627\u0633\u0645 \u0627\u0644\u0645\u0633\u062a\u062e\u062f\u0645
 user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
 user_organisation_unit=User organisation unit
 user_ou=User OU
-user_sub_units=User sub-units
-user_sub_x2_units=User sub-x2-units
+user_sub_units=\u0648\u062d\u062f\u0627\u062a \u0627\u0644\u0645\u0633\u062a\u062e\u062f\u0645 \u0627\u0644\u0641\u0631\u0639\u064a\u0629
+user_sub_x2_units=\u0648\u062d\u062f\u0627\u062a \u0627\u0644\u0645\u0633\u062a\u062e\u062f\u0645 \u0627\u0644\u0641\u0631\u0639\u064a\u0629 \u0645\u0646 \u0627\u0644\u0645\u0633\u062a\u0648\u0649 \u0627\u0644\u062b\u0627\u0646\u064a
 value=\u0627\u0644\u0642\u064a\u0645\u0629
 value_type=Value type
 variance=\u0627\u0644\u062a\u0628\u0627\u064a\u0646
-version=Version
+version=\u0627\u0644\u0625\u0635\u062f\u0627\u0631
 weekly=\u0623\u0633\u0628\u0648\u0639\u064a
 weekly_wednesday=Weekly (Start Wednesday)
 weekly_thursday=Weekly (Start Thursday)
 weekly_saturday=Weekly (Start Saturday)
 weekly_sunday=Weekly (Start Sunday)
-write_interpretation=Write interpretation
+write_interpretation=\u0643\u062a\u0627\u0628\u0629 \u062a\u0641\u0633\u064a\u0631
 write_your_interpretation=Write your interpretation
 yearly=\u0633\u0646\u0648\u064a
 yes=\u0646\u0639\u0645
-yesterday=Yesterday
+yesterday=\u0627\u0644\u0623\u0645\u0633
 you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
 you_do_not_have_access_to_all_items_in_this_favorite=\u0644\u064a\u0633 \u0644\u062f\u064a\u0643 \u0635\u0644\u0627\u062d\u064a\u0629 \u0627\u0644\u0648\u0635\u0648\u0644 \u0625\u0644\u0649 \u062c\u0645\u064a\u0639 \u0639\u0646\u0627\u0635\u0631 \u0647\u0630\u0647 \u0627\u0644\u0645\u0641\u0636\u0644\u0629
 
