--- a/i18n/i18n_app_cs.properties
+++ b/i18n/i18n_app_cs.properties
@@ -1,144 +1,144 @@
 about=O...
 add_legend=P\u0159idat legendu
-add_new=Add new
+add_new=P\u0159idat nov\u00fd
 address=Adresa
 add_to_dashboard=P\u0159idat na ovl\u00e1dac\u00ed panel
 aggregation_type=Typ agregace
 allow_external_access=Povolit extern\u00ed p\u0159\u00edstup
-and_or_lower_than=And/or lower than
+and_or_lower_than=A / nebo ni\u017e\u0161\u00ed ne\u017e
 attribution=Uveden\u00ed zdroje
 automatic=Automatick\u00fd
-average=Average
+average=Pr\u016fm\u011br
 bimonthly=Dva m\u011bs\u00edce
-boundary_layer=Boundary layer
+boundary_layer=vrstva hranic
 by_data_element=Podle datov\u00e9ho prvku
-cancel=Cancel
+cancel=Zru\u0161it
 can_edit_and_view=M\u016f\u017ee upravovat a prohl\u00ed\u017eet
-can_view=Can view
-chart=Chart
+can_view=M\u016f\u017ee zobrazit
+chart=Sch\u00e9ma
 classes_method=T\u0159\u00eddy / metoda
 clear=Vy\u010distit
 clear_map=Vy\u010distit mapu
 clustering=Shlukov\u00e1n\u00ed
-code=Code
+code=K\u00f3d
 color_scale=Barevn\u00e1 stupnice
 coordinate_field=Pole sou\u0159adnic
 coordinates=Sou\u0159adnice
 coordinates_could_not_be_loaded=Sou\u0159adnice nelze na\u010d\u00edst
-count=Count
-create=Create
-created_by=Created by
-current_legends=Current legends
-daily=Daily
+count=Po\u010det
+create=Vytvo\u0159it
+created_by=Vytvo\u0159il
+current_legends=Aktu\u00e1ln\u00ed legendy
+daily=Denn\u011b
 data=Data
-data_and_periods=Data and periods
-dataelement=Data element
+data_and_periods=Data a obdob\u00ed
+dataelement=Datov\u00fd prvek
 dataelement_group=Skupina datov\u00fdch prvk\u016f
-dataset=Data set
-delete=Delete
-delete_favorite=Delete favorite
+dataset=Datov\u00e1 sada
+delete=Smazat
+delete_favorite=Smazat obl\u00edbenou polo\u017eku
 details=Detaily
 download=St\u00e1hnout
-download_map_as_png=Download map as PNG
-drill_down_one_level=Drill down one level
+download_map_as_png=St\u00e1hnout mapu jako PNG
+drill_down_one_level=P\u0159ej\u00edt o jednu \u00farove\u0148 n\u00ed\u017ee
 drill_up_one_level=Jd\u011bte o jednu \u00farove\u0148 v\u00fd\u0161
 duplicate=Duplik\u00e1t
 earthengine_layer=Google Earth Engine
 earth_engine_layer_legend=Legenda Google Earth Engine
-elevation=Elevation
-edit_layer=Edit layer
-edit_legend=Edit legend
-email=Email
+elevation=Nadmo\u0159sk\u00e1 v\u00fd\u0161ka
+edit_layer=Upravit vrstvu
+edit_legend=Upravit legendu
+email=E-mail
 end_date=Datum ukon\u010den\u00ed
 end_value_should_be_bigger_than_start_value=Koncov\u00e1 hodnota by m\u011bla b\u00fdt v\u011bt\u0161\u00ed ne\u017e po\u010d\u00e1te\u010dn\u00ed hodnota
 equal_counts=Stejn\u00e9 po\u010dty
-equal_intervals=Equal intervals
-event_data_item=Event data item
+equal_intervals=Stejn\u00e9 intervaly
+event_data_item=Datov\u00e1 polo\u017eka ud\u00e1losti
 event_data_items=Polo\u017eky dat ud\u00e1losti
-event_layer=Event layer
-event_location=Event location
-event_time=Event time
+event_layer=Vrstva ud\u00e1lost\u00ed
+event_location=M\u00edsto kon\u00e1n\u00ed ud\u00e1losti
+event_time=\u010cas ud\u00e1losti
 external_layer=Vn\u011bj\u0161\u00ed vrstva
 external_layer_legend=Legenda extern\u00ed vrstvy
-facility_layer=Facility layer
+facility_layer=Vrstva za\u0159\u00edzen\u00ed
 facility_layer_export_currently_not_supported=Export vrstvy za\u0159\u00edzen\u00ed nen\u00ed aktu\u00e1ln\u011b podporov\u00e1n
-facility_layer_legend=Facility layer legend
+facility_layer_legend=Legenda vrstvy za\u0159\u00edzen\u00ed
 favorite_name=Obl\u00edben\u00fd n\u00e1zev
 favorite_outdated_create_new=Obl\u00edben\u00e9 je zastaral\u00e9 - vytvo\u0159te pros\u00edm nov\u00fd
 favorites=Obl\u00edben\u00e9
 filter=Filtr
-filter_by_value=Filter by value
+filter_by_value=Filtrovat podle hodnoty
 financial_april=Finan\u010dn\u00ed rok (od dubna)
 financial_july=Finan\u010dn\u00ed rok (od \u010dervence)
-financial_oct=Financial year (Start October)
+financial_oct=Finan\u010dn\u00ed rok (od \u0159\u00edjna)
 google_hybrid=Google Hybrid
 google_streets=Google Streets
 go_to_charts=P\u0159ej\u00edt na grafy
-go_to_pivot_tables=Go to pivot tables
-greater_than=Greater than
-group=Group
+go_to_pivot_tables=P\u0159ej\u00edt na kontingen\u010dn\u00ed tabulky
+greater_than=V\u011bt\u0161\u00ed ne\u017e
+group=Skupina
 group_nearby_events=Seskupit bl\u00edzk\u00e9 ud\u00e1losti
-groups=Groups
+groups=Skupiny
 groupset=Skupinov\u00e1 sada
-has_no_orgunits=has no organisation units
-high_color_size=High color / size
-highlight_color=Highlight color
-high_size=High size
-home=Home
-indicator=Indicator
+has_no_orgunits=nem\u00e1 \u017e\u00e1dn\u00e9 organiza\u010dn\u00ed jednotky
+high_color_size=Horn\u00ed barva / velikost
+highlight_color=Zv\u00fdraz\u0148ovac\u00ed barva
+high_size=Horn\u00ed velikost
+home=Domovsk\u00e1 strana
+indicator=Indik\u00e1tor
 indicator_group=Skupina indik\u00e1tor\u016f
 information=Informace
-infrastructural_data=Infrastructural data
+infrastructural_data=Infrastrukturn\u00ed data
 invalid_parameter=Neplatn\u00fd parametr
 item_type=Typ polo\u017eky
 landcover=krajinn\u00e9 pokryt\u00ed
-last_2_sixmonths=Last 2 six-months
+last_2_sixmonths=Posledn\u00ed 2 \u0161estim\u011bs\u00edce
 last_3_months=Posledn\u00ed 3 m\u011bs\u00edce
-last_4_quarters=Last 4 quarters
+last_4_quarters=Posledn\u00ed 4 \u010dtvrtlet\u00ed 
 last_4_weeks=Posledn\u00ed 4 t\u00fddny
-last_5_financial_years=Last 5 financial years
+last_5_financial_years=Posledn\u00edch 5 finan\u010dn\u00edch rok\u016f
 last_6_bimonths=Posledn\u00edch 6 dvou-m\u011bs\u00edc\u016f
 last_6_months=Posledn\u00edch 6 m\u011bs\u00edc\u016f
 last_12_months=Posledn\u00edch 12 m\u011bs\u00edc\u016f
 last_12_weeks=Posledn\u00edch 12 t\u00fddn\u016f
-last_52_weeks=Last 52 weeks
-last_bimonth=Last bi-month
-last_financial_year=Last financial year
-last_month=Last month
-last_quarter=Last quarter
-last_sixmonth=Last six-month
-last_week=Last week
-last_5_years=Last 5 years
+last_52_weeks=Posledn\u00edch 52 t\u00fddn\u016f
+last_bimonth=Posledn\u00ed dva m\u011bs\u00edce
+last_financial_year=Posledn\u00ed finan\u010dn\u00ed rok
+last_month=Minul\u00fd m\u011bs\u00edc
+last_quarter=Posledn\u00ed \u010dtvrtlet\u00ed
+last_sixmonth=Posledn\u00ed p\u016flrok
+last_week=Minul\u00fd t\u00fdden
+last_5_years=Posledn\u00edch 5 let
 last_year=Posledn\u00ed rok
 latitude=Zem\u011bpisn\u00e1 \u0161\u00ed\u0159ka
 layer=Vrstva
 layers=Vrstvy
 layer_stack_transparency=Z\u00e1sobn\u00edk vrstev / nepr\u016fhlednost
 legend_name=N\u00e1zev legendy
-legend_name_is_required=Legend name is required
-legends=Legends
+legend_name_is_required=N\u00e1zev legendy je povinn\u00fd
+legends=Legendy
 legendset=Sada legend
 legend_sets_available=sady legendy k dispozici
 legend_set_name=N\u00e1zev sady legend
 legendsets=Sady legend
 legend_symbolizer=Symboliz\u00e1tor
-legend_type=Legend type
+legend_type=Typ legendy
 level=\u00darove\u0148
-longitude=Longitude
-low_color_size=Low color / size
-low_size=Low size
-manage_favorites=Manage favorites
-map=Map
+longitude=Zem\u011bpisn\u00e1 d\u00e9lka
+low_color_size=Doln\u00ed barva / velikost
+low_size=Doln\u00ed velikost
+manage_favorites=Spravovat obl\u00edben\u00e9 polo\u017eky
+map=Mapa
 max=Max
 min=Min
 min_max_c=Min/max \u00b0C
-min_max_elevation=Min/max elevation
+min_max_elevation=Min./max. Nadmo\u0159sk\u00e1 v\u00fd\u0161ka
 min_max_people=Min./max. Osob
 min_max_rainfall=Min./max. Sr\u00e1\u017eky
 min_max_value=Min./max. Hodnota
 monthly=M\u011bs\u00ed\u010dn\u011b
-name=Name
-next=Next
+name=N\u00e1zev
+next=Dal\u0161\u00ed
 nighttime_lights=No\u010dn\u00ed sv\u011btla
 no=Ne
 no_groupset_selected=Nevybr\u00e1na \u017e\u00e1dn\u00e1 sada skupin
@@ -146,18 +146,18 @@ no_map_to_save=\u017d\u00e1dn\u00e1 mapa k ulo\u017een\u00ed
 none=\u017d\u00e1dn\u00fd
 no_event_coordinates_found=Nebyly nalezeny \u017e\u00e1dn\u00e9 sou\u0159adnice ud\u00e1losti
 no_organisation_unit_levels=\u017d\u00e1dn\u00e9 \u00farovn\u011b organiza\u010dn\u00ed jednotky
-no_organisation_units_specified=No organisation units specified
-no_period_selected=No period selected
+no_organisation_units_specified=Nebyly zad\u00e1ny \u017e\u00e1dn\u00e9 organiza\u010dn\u00ed jednotky
+no_period_selected=Nen\u00ed vybr\u00e1no \u017e\u00e1dn\u00e9 obdob\u00ed
 no_program_stage_selected=Nen\u00ed vybr\u00e1na \u017e\u00e1dn\u00e1 programov\u00e1 f\u00e1ze
 no_selected_items=Nevybran\u00e9 \u017e\u00e1dn\u00e9 polo\u017eky
 no_system_info_found=Nebyly nalezeny \u017e\u00e1dn\u00e9 syst\u00e9mov\u00e9 informace
-no_valid_coordinates_found=No valid coordinates found
-open_last_chart=Open last chart
-open_last_table=Open last table
+no_valid_coordinates_found=Nebyly nalezeny \u017e\u00e1dn\u00e9 platn\u00e9 sou\u0159adnice
+open_last_chart=Otev\u0159\u00edt posledn\u00ed graf
+open_last_table=Otev\u0159\u00edt posledn\u00ed tabulku
 openstreetmap=OpenStreetMap
-open_this_map_as_chart=Open this map as chart
+open_this_map_as_chart=Otev\u0159\u00edt tuto mapu jako graf
 open_this_map_as_table=Otev\u0159\u00edt tuto mapu jako tabulku
-options=Options
+options=Mo\u017enosti
 organisation_unit=Organiza\u010dn\u00ed jednotka
 organisation_unit_group_icons=Ikony skupiny organiza\u010dn\u00edch jednotek
 organisationunit_groupset=Sada skupiny organiza\u010dn\u00edch jednotek
@@ -165,113 +165,113 @@ organisation_units=Organiza\u010dn\u00ed jednotky
 organisationunit_search=Hled\u00e1n\u00ed organiza\u010dn\u00ed jednotky
 osm_light=OSM Light
 overwrite=P\u0159epsat
-overwrite_favorite=Overwrite favorite
-page=Page
-parent_unit=Parent unit
-period=Period
+overwrite_favorite=P\u0159epsat obl\u00edben\u00e9
+page=Strana
+parent_unit=Nad\u0159azen\u00e1 jednotka
+period=Obdob\u00ed
 period_type=Typ obdob\u00ed
 phone_number=Telefonn\u00ed \u010d\u00edslo
-placement=Placement
-please_create_map_first=Please create a map first
+placement=Um\u00edst\u011bn\u00ed
+please_create_map_first=Nejprve vytvo\u0159te mapu
 please_enter_a_name=Zadejte pros\u00edm n\u00e1zev
-please_enter_map_title=Please enter a map title
+please_enter_map_title=Zadejte n\u00e1zev mapy
 point_color=Barva bodu
-point_radius=Point radius
+point_radius=Polom\u011br bodu
 population_density=Hustota obyvatel
 precipitation=Sr\u00e1\u017eky
 predefined=P\u0159eddefinov\u00e1no
 previous=P\u0159edchoz\u00ed
 program=Program
-program_indicators=Program indicators
+program_indicators=Indik\u00e1tory programu
 public_access=Ve\u0159ejn\u00fd p\u0159\u00edstup
-quarterly=Quarterly
+quarterly=\u010ctvrtletn\u011b
 relative=Relativn\u00ed
-relocate=Relocate
+relocate=P\u0159em\u00edstit
 relocate_facility=P\u0159em\u00edstit za\u0159\u00edzen\u00ed
-remove=Remove
-rename=Rename
+remove=Odebrat
+rename=P\u0159ejmenovat
 reporting_rates=M\u00edry vykazov\u00e1n\u00ed
-revision=Revision
-search=Search
-search_for_favorites=Search for favorites
-search_for_user_groups=Search for user groups
-select=Select
+revision=Revize
+search=Hledat
+search_for_favorites=Vyhledat obl\u00edben\u00e9 
+search_for_user_groups=Vyhledat skupiny u\u017eivatel\u016f
+select=Vybrat
 select_groups=Vybrat skupiny
-selection_mode=Selection mode
+selection_mode=Re\u017eim v\u00fdb\u011bru
 select_dataset=Vybrat datovou sadu
 select_layer=Vybrat vrstvu
-select_layer_from_google_earth_engine=Select layer from Google Earth Engine
+select_layer_from_google_earth_engine=Vybrat vrstvu z Google Earth Engine
 select_levels=Vybrat \u00farovn\u011b
-select_organisation_unit_groups=Select organisation unit groups
-select_organisation_unit_levels=Select organisation unit levels
+select_organisation_unit_groups=Vybrat skupiny organiza\u010dn\u00edch jednotek
+select_organisation_unit_levels=Vybrat \u00farovn\u011b organiza\u010dn\u00ed jednotky
 select_organisation_units=Vybrat organiza\u010dn\u00ed jednotky
-select_period=Select period
-select_program=Select program
+select_period=Vybrat obdob\u00ed
+select_program=Vybrat program
 select_service=Vybrat slu\u017ebu
-select_stage=Select stage
+select_stage=Vybrat f\u00e1zi
 select_sub_units=Vybrat podjednotky
-select_year=Select year
+select_year=Vybrat rok
 service_url=URL slu\u017eby
-share=Share
-share_with_other_people=Share with others
-sharing_settings=Sharing settings
+share=Sd\u00edlet
+share_with_other_people=Sd\u00edlet s ostatn\u00edmi
+sharing_settings=Nastaven\u00ed sd\u00edlen\u00ed
 show=Zobrazit
-show_circular_area=Show circular area with radius (m)
-show_information_sheet=Show information
-show_lon_lat=Show longitude/latitude
-sixmonthly=Six-monthly
+show_circular_area=Zobrazit kruhovou plochu s polom\u011brem (m)
+show_information_sheet=Zobrazit informace
+show_lon_lat=Zobrazit zem\u011bpisnou d\u00e9lku / \u0161\u00ed\u0159ku
+sixmonthly=\u0160estim\u011bs\u00ed\u010dn\u00ed
 sixmonthly_april=Duben \u0161est m\u011bs\u00edc\u016f
-stage=Stage
+stage=F\u00e1ze
 start_date=Datum za\u010d\u00e1tku
-start_end_dates=Start/end dates
-start_end_value=Start/end value
+start_end_dates=Datum zah\u00e1jen\u00ed / ukon\u010den\u00ed
+start_end_value=Po\u010d\u00e1te\u010dn\u00ed / kone\u010dn\u00e1 hodnota
 stddev=Standardn\u00ed odchylka
-steps=Steps
-style=Style
-sub_units=Sub-units
+steps=Kroky
+style=Styl
+sub_units=Podjednotky
 sub_x2_units=Sub-x2 jednotky
 sum=Sou\u010det
-swap_lon_lat=Swap longitude/latitude
-symbol_layer=Facility layer
-table=Table
+swap_lon_lat=Prohodit zem\u011bpisnou d\u00e9lku / \u0161\u00ed\u0159ku
+symbol_layer=Vrstva za\u0159\u00edzen\u00ed
+table=Tabulka
 temperature=Teplota
-text_filter=Text filter
-thematic_layer=Thematic layer
-thematic_layer_1_legend=Thematic layer 1 legend
+text_filter=Textov\u00fd filtr
+thematic_layer=Tematick\u00e1 vrstva
+thematic_layer_1_legend=Legenda Tematick\u00e9 vrstvy 1
 thematic_layer_2_legend=Legenda Tematick\u00e9 vrstvy 2
-thematic_layer_3_legend=Thematic layer 3 legend
-thematic_layer_4_legend=Thematic layer 4 legend
+thematic_layer_3_legend=Legenda Tematick\u00e9 vrstvy 3
+thematic_layer_4_legend=Legenda Tematick\u00e9 vrstvy 4
 this_bimonth=Tyto dva m\u011bs\u00edce
 this_financial_year=Tento finan\u010dn\u00ed rok
 this_month=Tento m\u011bs\u00edc
 this_quarter=Toto \u010dtvrtlet\u00ed
-this_sixmonth=This six-month
+this_sixmonth=T\u011bchto \u0161est m\u011bs\u00edc\u016f
 this_week=Tento t\u00fdden
-this_year=This year
+this_year=Tento rok
 time_since_last_data_update=Uplynul\u00fd \u010das od posledn\u00ed aktualizace dat
 today=Dnes
 totals=Sou\u010dty
 update=Aktualizovat
-username=Username
-user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
+username=U\u017eivatelsk\u00e9 jm\u00e9no
+user_is_not_assigned_to_any_organisation_units=U\u017eivatel nen\u00ed p\u0159i\u0159azen k \u017e\u00e1dn\u00fdm organiza\u010dn\u00edm jednotk\u00e1m
 user_organisation_unit=Organiza\u010dn\u00ed jednotka u\u017eivatele
-user_ou=User OU
-user_sub_units=User sub-units
-user_sub_x2_units=User sub-x2-units
+user_ou=U\u017eivatel OJ
+user_sub_units=Podjednotky u\u017eivatele
+user_sub_x2_units=Jednotky 2. \u0159\u00e1du u\u017eivatele
 value=Hodnota
-value_type=Value type
+value_type=Typ hodnoty
 variance=Rozptyl
-version=Version
+version=Verze
 weekly=T\u00fddn\u011b
-weekly_wednesday=Weekly (Start Wednesday)
+weekly_wednesday=T\u00fddn\u011b (od st\u0159edy)
 weekly_thursday=T\u00fddn\u011b (od \u010dtvrtka)
 weekly_saturday=T\u00fddn\u011b (od soboty)
-weekly_sunday=Weekly (Start Sunday)
-write_interpretation=Write interpretation
+weekly_sunday=T\u00fddn\u011b (za\u010d\u00edn\u00e1 ned\u011bl\u00ed)
+write_interpretation=Napsat interpretaci
 write_your_interpretation=Napi\u0161te svou interpretaci
 yearly=Ro\u010dn\u011b
 yes=Ano
-yesterday=Yesterday
-you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
+yesterday=V\u010dera
+you_can_not_select_organisation_units_below_the_selected_level=Pod vybranou \u00farovn\u00ed nem\u016f\u017eete vybrat organiza\u010dn\u00ed jednotky
 you_do_not_have_access_to_all_items_in_this_favorite=Nem\u00e1te p\u0159\u00edstup ke v\u0161em polo\u017ek\u00e1m v t\u00e9to obl\u00edben\u00e9 polo\u017ece
 
