--- a/i18n/i18n_app_fr.properties
+++ b/i18n/i18n_app_fr.properties
@@ -1,21 +1,21 @@
 about=\u00c0 propos
 add_legend=Ajouter l\u00e9gende
-add_new=Add new
+add_new=Nouveau
 address=Adresse
 add_to_dashboard=Ajouter au tableau de bord
 aggregation_type=Type d'agr\u00e9gation
 allow_external_access=Permettre l'acc\u00e8s externe
-and_or_lower_than=And/or lower than
+and_or_lower_than=Et/ou inf\u00e9rieur
 attribution=Attribution
 automatic=Automatique
-average=Average
+average=Moyenne
 bimonthly=Bimensuel
-boundary_layer=Boundary layer
+boundary_layer=Couche fronti\u00e8re
 by_data_element=Par \u00e9l\u00e9ment de donn\u00e9es
-cancel=Cancel
+cancel=Annuler
 can_edit_and_view=Peut modifier et visualiser
-can_view=Can view
-chart=Chart
+can_view=Peut afficher
+chart=Graphique
 classes_method=Classes/m\u00e9thode
 clear=Effacer
 clear_map=R\u00e9initialiser la carte
@@ -25,89 +25,89 @@ color_scale=Rampe couleurs
 coordinate_field=Champ de coordonn\u00e9es
 coordinates=Coordonn\u00e9es
 coordinates_could_not_be_loaded=Les coordonn\u00e9es n'ont pas pu \u00eatre charg\u00e9es
-count=Count
-create=Create
-created_by=Created by
-current_legends=Current legends
-daily=Daily
-data=Data
-data_and_periods=Data and periods
-dataelement=Data element
+count=D\u00e9compte
+create=Cr\u00e9er
+created_by=Cr\u00e9\u00e9 par
+current_legends=L\u00e9gendes courantes
+daily=Quotidien
+data=Donn\u00e9es
+data_and_periods=Donn\u00e9es et p\u00e9riodes
+dataelement=\u00c9l\u00e9ment de donn\u00e9e
 dataelement_group=Groupe d'\u00e9l\u00e9ments de donn\u00e9es
-dataset=Data set
-delete=Delete
-delete_favorite=Delete favorite
+dataset=Ensemble de donn\u00e9es
+delete=Supprimer
+delete_favorite=Supprimer favoris
 details=D\u00e9tails
 download=T\u00e9l\u00e9charger
-download_map_as_png=Download map as PNG
-drill_down_one_level=Drill down one level
+download_map_as_png=T\u00e9l\u00e9charger en PNG
+drill_down_one_level=Descendre d'un niveau
 drill_up_one_level=Monter d'un niveau
 duplicate=Dupliquer
 earthengine_layer=Google Earth Engine
 earth_engine_layer_legend=L\u00e9gende Google Earth Engine
-elevation=Elevation
-edit_layer=Edit layer
-edit_legend=Edit legend
-email=Email
+elevation=Altitude
+edit_layer=Modifier la couche
+edit_legend=Editer la l\u00e9gende
+email=Adresse e-mail
 end_date=Date de fin
 end_value_should_be_bigger_than_start_value=La valeur finale doit \u00eatre sup\u00e9rieur \u00e0 la valeur de d\u00e9part
 equal_counts=Nombres \u00e9gaux
-equal_intervals=Equal intervals
-event_data_item=Event data item
+equal_intervals=Intervalles \u00e9gaux
+event_data_item=\u00c9l\u00e9ment de donn\u00e9es d'\u00e9v\u00e9nement
 event_data_items=\u00c9l\u00e9ments de donn\u00e9es d'\u00e9v\u00e9nement
-event_layer=Event layer
-event_location=Event location
-event_time=Event time
+event_layer=Couche \u00e9v\u00e8nements
+event_location=Lieu de l'\u00e9v\u00e8nement
+event_time=Date de l'\u00e9v\u00e8nement
 external_layer=Couche externe
 external_layer_legend=L\u00e9gende couche externe
-facility_layer=Facility layer
+facility_layer=Couche \u00e9tablissements
 facility_layer_export_currently_not_supported=L'exportation de la couche d'\u00e9tablissements n'est pas support\u00e9e actuellement
-facility_layer_legend=Facility layer legend
+facility_layer_legend=L\u00e9gende couche d'\u00e9tablissements
 favorite_name=Nom du favori
 favorite_outdated_create_new=Le favori n'est pas \u00e0 jour - veuillez en cr\u00e9er un nouveau
 favorites=Favoris
 filter=Filtre
-filter_by_value=Filter by value
+filter_by_value=Filtrer par valeur
 financial_april=Ann\u00e9e fiscale (D\u00e9butant par avril)
 financial_july=Ann\u00e9e fiscale (D\u00e9butant par juillet)
-financial_oct=Financial year (Start October)
-google_hybrid=Google Hybrid
+financial_oct=Ann\u00e9e fiscale (D\u00e9butant par octobre)
+google_hybrid=Google Hybride
 google_streets=Google Streets
 go_to_charts=Aller dans les graphiques
-go_to_pivot_tables=Go to pivot tables
-greater_than=Greater than
-group=Group
+go_to_pivot_tables=Aller dans les tableaux crois\u00e9s
+greater_than=Sup\u00e9rieur \u00e0
+group=Groupe
 group_nearby_events=Grouper les \u00e9v\u00e8nements proches
-groups=Groups
+groups=Groupes
 groupset=Ensemble de groupes
-has_no_orgunits=has no organisation units
-high_color_size=High color / size
-highlight_color=Highlight color
-high_size=High size
-home=Home
-indicator=Indicator
+has_no_orgunits=n'a pas d'unit\u00e9 d'organisation
+high_color_size=Couleur / taille \u00e9l\u00e9v\u00e9e
+highlight_color=Couleur de surbrilance
+high_size=Taille max.
+home=Accueil
+indicator=Indicateur
 indicator_group=Groupe d'indicateurs
 information=Information
-infrastructural_data=Infrastructural data
+infrastructural_data=Donn\u00e9es d'insfrastructure
 invalid_parameter=Param\u00e8tre non valable
 item_type=Type d'\u00e9l\u00e9ment
 landcover=Couverture terrestre
-last_2_sixmonths=Last 2 six-months
+last_2_sixmonths=2 derniers semestres
 last_3_months=3 derniers mois
-last_4_quarters=Last 4 quarters
+last_4_quarters=4 derniers trimestres
 last_4_weeks=4 derni\u00e8res semaines
-last_5_financial_years=Last 5 financial years
+last_5_financial_years=5 derni\u00e8res ann\u00e9es fiscales
 last_6_bimonths=6 derniers bimestres
 last_6_months=6 derniers mois
 last_12_months=12 derniers mois
 last_12_weeks=12 derni\u00e8res semaines
-last_52_weeks=Last 52 weeks
-last_bimonth=Last bi-month
-last_financial_year=Last financial year
-last_month=Last month
-last_quarter=Last quarter
-last_sixmonth=Last six-month
-last_week=Last week
+last_52_weeks=52 derni\u00e8res semaines
+last_bimonth=Dernier bi-mestre
+last_financial_year=Ann\u00e9e fiscale pr\u00e9c\u00e9dente
+last_month=Mois dernier
+last_quarter=Trimestre pr\u00e9c\u00e9dent
+last_sixmonth=Dernier semestre
+last_week=Semaine pass\u00e9e
 last_5_years=5 derni\u00e8res ann\u00e9es
 last_year=L'ann\u00e9e pass\u00e9e
 latitude=Latitude
@@ -116,29 +116,29 @@ layers=Couches
 layer_stack_transparency=Superposition de couche / Transparence
 legend_name=Nom de l\u00e9gende
 legend_name_is_required=Le nom de la l\u00e9gende est obligatoire
-legends=Legends
+legends=L\u00e9gendes
 legendset=Jeu de l\u00e9gende
 legend_sets_available=Jeu de l\u00e9gendes disponibles
 legend_set_name=Nom de jeu de l\u00e9gendes
 legendsets=Jeux de l\u00e9gendes
 legend_symbolizer=Symboliseur
-legend_type=Legend type
+legend_type=Type de l\u00e9gende
 level=Niveau
 longitude=Longitude
-low_color_size=Low color / size
-low_size=Low size
-manage_favorites=Manage favorites
-map=Map
+low_color_size=Couleur faible / taille
+low_size=Taille min.
+manage_favorites=G\u00e9rer les favoris
+map=Carte
 max=Max
 min=Min
 min_max_c=Min/max \u00b0C
-min_max_elevation=Min/max elevation
+min_max_elevation=Min/max altitude
 min_max_people=Min/max personnes
 min_max_rainfall=Min/max pluviom\u00e9trie
 min_max_value=Valeur Min/max
 monthly=Mensuel
-name=Name
-next=Next
+name=Nom
+next=Suivante
 nighttime_lights=Lumi\u00e8res nocturnes
 no=Non
 no_groupset_selected=Aucun ensemble de groupes n'est s\u00e9lectionn\u00e9
@@ -146,16 +146,16 @@ no_map_to_save=Aucune carte \u00e0 enregistrer
 none=Aucun
 no_event_coordinates_found=Coordonn\u00e9es d'\u00e9v\u00e8nement non trouv\u00e9es
 no_organisation_unit_levels=Aucun niveau d'unit\u00e9s d'organisation
-no_organisation_units_specified=No organisation units specified
-no_period_selected=No period selected
+no_organisation_units_specified=Unit\u00e9s d'organisation non sp\u00e9cifi\u00e9es
+no_period_selected=Aucune p\u00e9riode n'est s\u00e9lectionn\u00e9
 no_program_stage_selected=Aucun stade de programme s\u00e9lectionn\u00e9
 no_selected_items=Aucun \u00e9l\u00e9ment s\u00e9lectionn\u00e9
 no_system_info_found=Info syst\u00e8me non trouv\u00e9e
-no_valid_coordinates_found=No valid coordinates found
-open_last_chart=Open last chart
-open_last_table=Open last table
+no_valid_coordinates_found=Coordonn\u00e9es valides non trouv\u00e9es
+open_last_chart=Ouvrir dernier graphique
+open_last_table=Ouvrir dernier tableau
 openstreetmap=OpenStreetMap
-open_this_map_as_chart=Open this map as chart
+open_this_map_as_chart=Ouvrir cette carte en tant que graphique
 open_this_map_as_table=Ouvrir cette carte en tant que tableau
 options=Options
 organisation_unit=Unit\u00e9 d'organisation
@@ -165,113 +165,113 @@ organisation_units=Unit\u00e9s d'organisation
 organisationunit_search=Niveau d'unit\u00e9 d'organisation
 osm_light=OSM Light
 overwrite=Ecraser
-overwrite_favorite=Overwrite favorite
+overwrite_favorite=Ecraser favori
 page=Page
-parent_unit=Parent unit
-period=Period
+parent_unit=Unit\u00e9 parente
+period=P\u00e9riode
 period_type=Type de p\u00e9riode
 phone_number=Num\u00e9ro de t\u00e9l\u00e9phone
 placement=Placement
-please_create_map_first=Please create a map first
+please_create_map_first=Veuillez d'abord cr\u00e9er la carte
 please_enter_a_name=Veuillez saisir un nom
-please_enter_map_title=Please enter a map title
+please_enter_map_title=Veuillez saisir le titre de la carte
 point_color=Couleur des points
-point_radius=Point radius
+point_radius=Rayon de point
 population_density=Densit\u00e9 de population
 precipitation=Pr\u00e9cipitation
 predefined=Pr\u00e9d\u00e9fini
 previous=Pr\u00e9c\u00e9dente
 program=Programme
-program_indicators=Program indicators
+program_indicators=Indicateurs de programme
 public_access=Acc\u00e8s public
-quarterly=Quarterly
+quarterly=Trimestriel
 relative=Relative
-relocate=Relocate
+relocate=Relocaliser
 relocate_facility=D\u00e9placer l'\u00e9tablissement
-remove=Remove
-rename=Rename
+remove=Supprimer
+rename=Renommer
 reporting_rates=Taux de rapportage
-revision=Revision
-search=Search
-search_for_favorites=Search for favorites
-search_for_user_groups=Search for user groups
-select=Select
+revision=R\u00e9vision
+search=Rechercher
+search_for_favorites=Chercher des favoris
+search_for_user_groups=Chercher des groupes d'utilisateurs
+select=S\u00e9lectionner
 select_groups=S\u00e9lectionner des groupes
-selection_mode=Selection mode
+selection_mode=S\u00e9lectionner le mode
 select_dataset=S\u00e9lectionnez ensemble de donn\u00e9es
 select_layer=S\u00e9lectionnez couche
-select_layer_from_google_earth_engine=Select layer from Google Earth Engine
+select_layer_from_google_earth_engine=S\u00e9lectionnez la couche de Google Earth Engine
 select_levels=S\u00e9lectionner les niveaux
-select_organisation_unit_groups=Select organisation unit groups
-select_organisation_unit_levels=Select organisation unit levels
+select_organisation_unit_groups=S\u00e9lectionner les groupes d'unit\u00e9 d'organisation
+select_organisation_unit_levels=S\u00e9lectionner les niveaux d'unit\u00e9 d'organisation
 select_organisation_units=S\u00e9lectionner les unit\u00e9s d'organisation
-select_period=Select period
-select_program=Select program
+select_period=S\u00e9lectionner une p\u00e9riode\u00a0
+select_program=S\u00e9lectionner le programme
 select_service=S\u00e9lectionnez service
-select_stage=Select stage
+select_stage=S\u00e9lectionner l'\u00e9tape
 select_sub_units=S\u00e9lectionner sous-unit\u00e9s
-select_year=Select year
+select_year=S\u00e9lectionner une ann\u00e9e
 service_url=URL du service
-share=Share
+share=Partager
 share_with_other_people=Partager avec d'autres
-sharing_settings=Sharing settings
+sharing_settings=Param\u00e8tres de partage
 show=Afficher
-show_circular_area=Show circular area with radius (m)
-show_information_sheet=Show information
+show_circular_area=Afficher une zone circulaire avec rayon (m)
+show_information_sheet=Afficher la fiche d'informations
 show_lon_lat=Afficher longitude/latitude
-sixmonthly=Six-monthly
+sixmonthly=Semestriel
 sixmonthly_april=Semestriel Avril
-stage=Stage
+stage=Etape
 start_date=Date de d\u00e9but
-start_end_dates=Start/end dates
-start_end_value=Start/end value
+start_end_dates=Dates de d\u00e9but/fin
+start_end_value=Valeur de d\u00e9but/fin
 stddev=\u00c9cart type
-steps=Steps
+steps=\u00c9tapes
 style=Style
-sub_units=Sub-units
+sub_units=Sous-unit\u00e9s
 sub_x2_units=Sous-unit\u00e9s-x2
 sum=Somme
-swap_lon_lat=Swap longitude/latitude
-symbol_layer=Facility layer
-table=Table
+swap_lon_lat=Permuter longitude/latitude
+symbol_layer=Couche \u00e9tablissements
+table=Tableau
 temperature=Temp\u00e9rature
-text_filter=Text filter
-thematic_layer=Thematic layer
-thematic_layer_1_legend=Thematic layer 1 legend
+text_filter=Filtre de texte
+thematic_layer=Couche th\u00e9matique 
+thematic_layer_1_legend=L\u00e9gende couche th\u00e9matique 1
 thematic_layer_2_legend=L\u00e9gende couche th\u00e9matique 2
-thematic_layer_3_legend=Thematic layer 3 legend
-thematic_layer_4_legend=Thematic layer 4 legend
+thematic_layer_3_legend=L\u00e9gende couche th\u00e9matique 3
+thematic_layer_4_legend=L\u00e9gende couche th\u00e9matique 4
 this_bimonth=Ce bimestre
 this_financial_year=Ann\u00e9e fiscale en cours
 this_month=Ce mois
 this_quarter=Ce trimestre
-this_sixmonth=This six-month
+this_sixmonth=Ce semestre
 this_week=Cette semaine
-this_year=This year
+this_year=Ann\u00e9e en cours
 time_since_last_data_update=Temps \u00e9coul\u00e9 depuis derni\u00e8re mise \u00e0 jour
 today=Aujourd'hui
 totals=Totaux
 update=Mettre \u00e0 jour
-username=Username
-user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
+username=Nom d'utilisateur
+user_is_not_assigned_to_any_organisation_units=L'utilisateur n'est assign\u00e9 \u00e0 aucune unit\u00e9 d'organisation
 user_organisation_unit=Unit\u00e9s d'organisation de l'utilisateur
-user_ou=User OU
-user_sub_units=User sub-units
-user_sub_x2_units=User sub-x2-units
+user_ou=UO utilisateur
+user_sub_units=Sous-unit\u00e9s de l'utilisateur
+user_sub_x2_units=Sous-unit\u00e9s utilisateur x2
 value=Valeur
-value_type=Value type
+value_type=Type de valeur
 variance=Variance
 version=Version
 weekly=Hebdomadaire
-weekly_wednesday=Weekly (Start Wednesday)
+weekly_wednesday=Hebdomadaire (d\u00e9but mercredi)
 weekly_thursday=Hebdomadaire (d\u00e9but jeudi)
 weekly_saturday=Hebdomadaire (d\u00e9but samedi)
-weekly_sunday=Weekly (Start Sunday)
-write_interpretation=Write interpretation
+weekly_sunday=Hebdomadaire (d\u00e9but dimanche)
+write_interpretation=Ecrire une interpr\u00e9tation
 write_your_interpretation=Ecrire votre interpr\u00e9tation
 yearly=Annuel
 yes=Oui
-yesterday=Yesterday
-you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
+yesterday=Hier
+you_can_not_select_organisation_units_below_the_selected_level=Vous ne pouvez pas s\u00e9lectionner d'unit\u00e9s d'organisation inf\u00e9rieures au niveau s\u00e9lectionn\u00e9
 you_do_not_have_access_to_all_items_in_this_favorite=Vous n'avez pas acc\u00e8s \u00e0 tous les \u00e9l\u00e9ments de ce favori
 
