--- a/i18n/i18n_app_id.properties
+++ b/i18n/i18n_app_id.properties
@@ -1,6 +1,6 @@
 about=Tentang
 add_legend=Tambahkan legenda
-add_new=Add new
+add_new=Tambahkan baru
 address=Alamat
 add_to_dashboard=Tambahkan pada dashboard
 aggregation_type=Tipe agregasi
@@ -8,38 +8,38 @@ allow_external_access=Izinkan akses eksternal
 and_or_lower_than=And/or lower than
 attribution=Attribution
 automatic=Otomatis
-average=Average
+average=Rata-rata
 bimonthly=Dua bulanan
 boundary_layer=Boundary layer
 by_data_element=Berdasarkan data elemen
-cancel=Cancel
+cancel=Batal
 can_edit_and_view=Dapat diedit dan ditampilkan
-can_view=Can view
-chart=Chart
+can_view=Dapat ditampilkan
+chart=Diagram
 classes_method=Classes/ metode
 clear=Hapus
 clear_map=Clear map
 clustering=Clustering
-code=Code
+code=Kode
 color_scale=Color scale
 coordinate_field=Coordinate field
 coordinates=Koordinat
 coordinates_could_not_be_loaded=Koordinat tidak dapat ditemukan
-count=Count
-create=Create
-created_by=Created by
-current_legends=Current legends
-daily=Daily
+count=Hitung
+create=Buat
+created_by=Dibuat oleh
+current_legends=Legenda terbaru
+daily=Harian
 data=Data
 data_and_periods=Data and periods
-dataelement=Data element
+dataelement=Elemen data
 dataelement_group=Grup elemen data
-dataset=Data set
-delete=Delete
-delete_favorite=Delete favorite
+dataset=Himpunan data
+delete=Hapus
+delete_favorite=Hapus favorit
 details=Rincian
 download=Unduh
-download_map_as_png=Download map as PNG
+download_map_as_png=Download peta dalam bentuk PNG
 drill_down_one_level=Drill down one level
 drill_up_one_level=Drill up one level
 duplicate=Duplikasi
@@ -52,17 +52,17 @@ email=Email
 end_date=Tanggal berakhir
 end_value_should_be_bigger_than_start_value=End value should be bigger than start value
 equal_counts=Equal counts
-equal_intervals=Equal intervals
-event_data_item=Event data item
+equal_intervals=Interval yang sama
+event_data_item=Data item pada even
 event_data_items=Item data even
 event_layer=Event layer
-event_location=Event location
-event_time=Event time
+event_location=Lokasi even
+event_time=Waktu even
 external_layer=External layer
 external_layer_legend=External layer legend
 facility_layer=Facility layer
 facility_layer_export_currently_not_supported=Eksport facility layer saat ini tidak dapat dilakukan
-facility_layer_legend=Facility layer legend
+facility_layer_legend=Legenda facility layer
 favorite_name=Favorite name
 favorite_outdated_create_new=Favorite sudah kadaluarsa - silakan perbarui
 favorites=Favorit
@@ -70,44 +70,44 @@ filter=Saring
 filter_by_value=Filter by value
 financial_april=Tahun finansial (Mulai April)
 financial_july=Tahun finansial (Mulai Juli)
-financial_oct=Financial year (Start October)
+financial_oct=Tahun finansial (Mulai Oktober)
 google_hybrid=Google Hybrid
 google_streets=Google Streets
 go_to_charts=Pergi ke grafik
-go_to_pivot_tables=Go to pivot tables
-greater_than=Greater than
-group=Group
+go_to_pivot_tables=Ke tabel pivot
+greater_than=Lebih besar dari
+group=Grup
 group_nearby_events=Group nearby events
-groups=Groups
+groups=Banyak grup
 groupset=Set grup
-has_no_orgunits=has no organisation units
-high_color_size=High color / size
-highlight_color=Highlight color
+has_no_orgunits=Tidak memiliki unit organisasi
+high_color_size=High color/size
+highlight_color=Highlight warna
 high_size=High size
-home=Home
-indicator=Indicator
+home=Beranda
+indicator=Indikator
 indicator_group=grup indikator
 information=Informasi
-infrastructural_data=Infrastructural data
+infrastructural_data=Data infrastruktur
 invalid_parameter=Invalid parameter
 item_type=Tipe item
 landcover=Landcover
-last_2_sixmonths=Last 2 six-months
+last_2_sixmonths=2 semester terakhir
 last_3_months=3 bulan terakhir
-last_4_quarters=Last 4 quarters
+last_4_quarters=4 triwulan terakhir
 last_4_weeks=4 minggu terakhir
-last_5_financial_years=Last 5 financial years
+last_5_financial_years=5 tahun finansial terakhir
 last_6_bimonths=6 dwiwulan terakhir
 last_6_months=6 bulan terakhir
 last_12_months=12 bulan terakhir
 last_12_weeks=12 minggu terakhir
-last_52_weeks=Last 52 weeks
-last_bimonth=Last bi-month
-last_financial_year=Last financial year
-last_month=Last month
-last_quarter=Last quarter
-last_sixmonth=Last six-month
-last_week=Last week
+last_52_weeks=52 minggu terakhir
+last_bimonth=Dwiwulan terakhir
+last_financial_year=Anggaran tahun lalu
+last_month=Bulan lalu
+last_quarter=Triwulan yang lalu
+last_sixmonth=Semester lalu
+last_week=Minggu lalu
 last_5_years=5 tahun terakhir
 last_year=Tahun lalu
 latitude=Garis lintang
@@ -116,29 +116,29 @@ layers=Layers
 layer_stack_transparency=Layer stack/ transparan
 legend_name=Nama legenda
 legend_name_is_required=Legend name is required
-legends=Legends
+legends=Legenda
 legendset=Set legenda
 legend_sets_available=legend sets available
 legend_set_name=Nama set legenda
 legendsets=Set legenda
 legend_symbolizer=Simbol
-legend_type=Legend type
+legend_type=Tipe legenda
 level=Level
-longitude=Longitude
-low_color_size=Low color / size
+longitude=Garis bujur
+low_color_size=Low color/ size
 low_size=Low size
-manage_favorites=Manage favorites
-map=Map
+manage_favorites=Pengaturan favorit
+map=Peta
 max=Maksimal
-min=Min
+min=Minimal
 min_max_c=Min/max \u00b0C
 min_max_elevation=Min/max elevation
 min_max_people=Min/max people
 min_max_rainfall=Min/max rainfall
 min_max_value=Min/max value
 monthly=Bulanan
-name=Name
-next=Next
+name=Nama
+next=Selanjutnya
 nighttime_lights=Nighttime lights
 no=Tidak
 no_groupset_selected=Tidak ada set grup yang dipilih
@@ -147,17 +147,17 @@ none=Tidak ada
 no_event_coordinates_found=No event coordinates found
 no_organisation_unit_levels=No organisation unit levels
 no_organisation_units_specified=No organisation units specified
-no_period_selected=No period selected
+no_period_selected=Tidak ada periode yang dipilih
 no_program_stage_selected=No program stage selected
 no_selected_items=No selected items
 no_system_info_found=No system info found
-no_valid_coordinates_found=No valid coordinates found
-open_last_chart=Open last chart
-open_last_table=Open last table
+no_valid_coordinates_found=Koordinat valid tidak dapat ditemukan
+open_last_chart=Buka grafik terakhir
+open_last_table=Buka tabel terakhir
 openstreetmap=OpenStreetMap
 open_this_map_as_chart=Open this map as chart
 open_this_map_as_table=Open this map as table
-options=Options
+options=Opsi
 organisation_unit=Unit organisasi
 organisation_unit_group_icons=Organisation unit group icons
 organisationunit_groupset=Set grup unit organisasi
@@ -165,79 +165,79 @@ organisation_units=Unit organisasi
 organisationunit_search=Pencarian unit organisasi
 osm_light=OSM Light
 overwrite=Timpa
-overwrite_favorite=Overwrite favorite
-page=Page
+overwrite_favorite=Timpa favorit
+page=Halaman
 parent_unit=Parent unit
-period=Period
+period=Periode
 period_type=Tipe periode
 phone_number=Nomor Telepon
 placement=Placement
-please_create_map_first=Please create a map first
+please_create_map_first=Silakan buat peta terlebih dahulu
 please_enter_a_name=Please enter a name
-please_enter_map_title=Please enter a map title
+please_enter_map_title=Silakan menuliskan judul peta
 point_color=Point color
-point_radius=Point radius
+point_radius=Radius titik
 population_density=Population density
 precipitation=Precipitation
 predefined=Predefined
 previous=Sebelumnya
 program=Program
-program_indicators=Program indicators
+program_indicators=Indikator program
 public_access=Akses publik
-quarterly=Quarterly
+quarterly=Triwulanan
 relative=Relative
-relocate=Relocate
+relocate=Pindahkan
 relocate_facility=Relocate facility
-remove=Remove
-rename=Rename
+remove=Hapus
+rename=Ganti nama
 reporting_rates=Angka pelaporan
-revision=Revision
-search=Search
-search_for_favorites=Search for favorites
-search_for_user_groups=Search for user groups
-select=Select
+revision=Revisi
+search=Pencarian
+search_for_favorites=Pencarian favorit
+search_for_user_groups=Pencarian kelompok pengguna
+select=Pilih
 select_groups=Select groups
 selection_mode=Selection mode
 select_dataset=Select dataset
 select_layer=Select layer
 select_layer_from_google_earth_engine=Select layer from Google Earth Engine
 select_levels=Select levels
-select_organisation_unit_groups=Select organisation unit groups
-select_organisation_unit_levels=Select organisation unit levels
+select_organisation_unit_groups=Pilih kelompok unit organisasi
+select_organisation_unit_levels=Pilih level unit organisasi
 select_organisation_units=Pilih unit organisasi
 select_period=Select period
-select_program=Select program
+select_program=Pilih program
 select_service=Select service
 select_stage=Select stage
 select_sub_units=Pilih sub-unit
 select_year=Select year
 service_url=Service URL
-share=Share
+share=Bagikan
 share_with_other_people=Bagikan dengan orang lain
-sharing_settings=Sharing settings
+sharing_settings=Pengaturan pembagian
 show=Tampilkan
-show_circular_area=Show circular area with radius (m)
-show_information_sheet=Show information
+show_circular_area=Perlihatkan area sekeliling dengan radius (m)
+show_information_sheet=Tampilkan lembar informasi
 show_lon_lat=Show longitude/latitude
-sixmonthly=Six-monthly
+sixmonthly=Enam bulanan
 sixmonthly_april=Semester April
 stage=Stage
 start_date=Tanggal dimulai
-start_end_dates=Start/end dates
-start_end_value=Start/end value
+start_end_dates=Tanggal dimulai/berakhir
+start_end_value=Nilai awal/akhir
 stddev=Standar deviasi
-steps=Steps
+steps=langkah
 style=Gaya
 sub_units=Sub-units
 sub_x2_units=Sub-x2-units
 sum=Jumlah
 swap_lon_lat=Swap longitude/latitude
 symbol_layer=Facility layer
-table=Table
+table=Tabel
 temperature=Temperature
-text_filter=Text filter
-thematic_layer=Thematic layer
-thematic_layer_1_legend=Thematic layer 1 legend
+text_filter=Filter teks
+thematic_layer=Layer tematik
+thematic_layer_1_legend=Legenda layer tematik 1
 thematic_layer_2_legend=Legenda layer tematik 2
 thematic_layer_3_legend=Thematic layer 3 legend
 thematic_layer_4_legend=Thematic layer 4 legend
@@ -245,33 +245,33 @@ this_bimonth=2 bulan ini
 this_financial_year=Anggaran tahun ini
 this_month=Bulan ini
 this_quarter=Triwulan ini
-this_sixmonth=This six-month
+this_sixmonth=6 bulan ini
 this_week=Minggu ini
-this_year=This year
+this_year=Tahun ini
 time_since_last_data_update=Elapsed time since last data update
 today=Hari ini
 totals=Total
 update=Perbarui
-username=Username
+username=Nama pengguna
 user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
 user_organisation_unit=User organisation unit
 user_ou=User OU
-user_sub_units=User sub-units
-user_sub_x2_units=User sub-x2-units
+user_sub_units=Subunit pengguna
+user_sub_x2_units=Sub-x2-unit pengguna
 value=Nilai
-value_type=Value type
+value_type=Tipe nilai
 variance=Varian
-version=Version
+version=Versi
 weekly=Mingguan
 weekly_wednesday=Weekly (Start Wednesday)
 weekly_thursday=Weekly (Start Thursday)
 weekly_saturday=Weekly (Start Saturday)
 weekly_sunday=Weekly (Start Sunday)
-write_interpretation=Write interpretation
+write_interpretation=Tulis interpretasi
 write_your_interpretation=Tuliskan interpretasi Anda
 yearly=Tahunan
 yes=Iya
-yesterday=Yesterday
+yesterday=Kemarin
 you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
 you_do_not_have_access_to_all_items_in_this_favorite=Anda tidak memiliki akses untuk semua item di favorit
 
