--- a/i18n/i18n_app_or.properties
+++ b/i18n/i18n_app_or.properties
@@ -84,7 +84,7 @@ has_no_orgunits=has no organisation units
 high_color_size=High color / size
 highlight_color=Highlight color
 high_size=High size
-home=Home
+home=\u0b17\u0b43\u0b39
 indicator=Indicator
 indicator_group=Indicator group
 information=Information
@@ -104,10 +104,10 @@ last_12_weeks=Last 12 weeks
 last_52_weeks=Last 52 weeks
 last_bimonth=Last bi-month
 last_financial_year=Last financial year
-last_month=Last month
+last_month=\u0b17\u0b24 \u0b2e\u0b3e\u0b38
 last_quarter=Last quarter
 last_sixmonth=Last six-month
-last_week=Last week
+last_week=\u0b17\u0b24 \u0b38\u0b2a\u0b4d\u0b24\u0b3e\u0b39
 last_5_years=Last 5 years
 last_year=Last year
 latitude=\u0b05\u0b15\u0b4d\u0b37\u0b3e\u0b02\u0b36
@@ -124,7 +124,7 @@ legendsets=Legend sets
 legend_symbolizer=Symbolizer
 legend_type=Legend type
 level=Level
-longitude=Longitude
+longitude=\u0b26\u0b4d\u0b30\u0b3e\u0b18\u0b3f\u0b2e\u0b3e
 low_color_size=Low color / size
 low_size=Low size
 manage_favorites=Manage favorites
@@ -271,7 +271,7 @@ write_interpretation=Write interpretation
 write_your_interpretation=Write your interpretation
 yearly=\u0b2c\u0b3e\u0b30\u0b4d\u0b37\u0b3f\u0b15
 yes=\u0b39\u0b01
-yesterday=Yesterday
+yesterday=\u0b17\u0b24\u0b15\u0b3e\u0b32\u0b3f
 you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
 you_do_not_have_access_to_all_items_in_this_favorite=You do not have access to all items in this favorite
 
