--- a/i18n/i18n_app_ro.properties
+++ b/i18n/i18n_app_ro.properties
@@ -1,6 +1,6 @@
 about=About
 add_legend=Add legend
-add_new=Add new
+add_new=Ad\u0103ugare nou
 address=Address
 add_to_dashboard=Ad\u0103ugare pe tabloul de bord
 aggregation_type=Aggregation type
@@ -12,7 +12,7 @@ average=Average
 bimonthly=Bi-monthly
 boundary_layer=Boundary layer
 by_data_element=By data element
-cancel=Cancel
+cancel=Anulare
 can_edit_and_view=Can edit and view
 can_view=Can view
 chart=Chart
@@ -26,7 +26,7 @@ coordinate_field=Coordinate field
 coordinates=Coordinates
 coordinates_could_not_be_loaded=Coordinates could not be loaded
 count=Count
-create=Create
+create=Creare
 created_by=Created by
 current_legends=Current legends
 daily=Daily
@@ -34,8 +34,8 @@ data=Data
 data_and_periods=Data and periods
 dataelement=Data element
 dataelement_group=Data element group
-dataset=Data set
-delete=Delete
+dataset=Set de date
+delete=Lichidare
 delete_favorite=Delete favorite
 details=Details
 download=Download
@@ -76,15 +76,15 @@ google_streets=Google Streets
 go_to_charts=Go to charts
 go_to_pivot_tables=Go to pivot tables
 greater_than=Greater than
-group=Group
+group=Grup
 group_nearby_events=Group nearby events
-groups=Groups
+groups=Grupuri
 groupset=Group set
 has_no_orgunits=has no organisation units
 high_color_size=High color / size
 highlight_color=Highlight color
 high_size=High size
-home=Home
+home=Acas\u0103
 indicator=Indicator
 indicator_group=Grup de indicatori
 information=Information
@@ -92,22 +92,22 @@ infrastructural_data=Infrastructural data
 invalid_parameter=Invalid parameter
 item_type=Item type
 landcover=Landcover
-last_2_sixmonths=Last 2 six-months
+last_2_sixmonths=Ultimele 2 \u0219ase luni
 last_3_months=Ultimele 3 luni
-last_4_quarters=Last 4 quarters
+last_4_quarters=Ultimele 4 trimestre
 last_4_weeks=Ultimele 4 s\u0103pt\u0103m\u00e2ni
-last_5_financial_years=Last 5 financial years
+last_5_financial_years=Ultimii 5 ani financiari
 last_6_bimonths=Last 6 bi-months
 last_6_months=Ultimele 6 luni
 last_12_months=Ultimele 12 luni
 last_12_weeks=Ultimele 12 s\u0103pt\u0103m\u00e2ni
-last_52_weeks=Last 52 weeks
+last_52_weeks=Ultimele 52 de s\u0103pt\u0103m\u00e2ni
 last_bimonth=Last bi-month
-last_financial_year=Last financial year
-last_month=Last month
-last_quarter=Last quarter
-last_sixmonth=Last six-month
-last_week=Last week
+last_financial_year=Ultimul an financiar
+last_month=Luna trecut\u0103
+last_quarter=Ultimul trimestru
+last_sixmonth=Ultimele \u0219ase luni
+last_week=S\u0103pt\u0103m\u00e2na trecut\u0103
 last_5_years=Ultimii 5 ani
 last_year=Anul trecut
 latitude=Latitude
@@ -138,7 +138,7 @@ min_max_rainfall=Min/max rainfall
 min_max_value=Min/max value
 monthly=Lunar
 name=Name
-next=Next
+next=Urm\u0103torul
 nighttime_lights=Nighttime lights
 no=Nu
 no_groupset_selected=No group set selected
@@ -184,7 +184,7 @@ previous=Previous
 program=Program
 program_indicators=Program indicators
 public_access=Public access
-quarterly=Quarterly
+quarterly=Trimestrial
 relative=Relative
 relocate=Relocate
 relocate_facility=Relocate facility
@@ -192,10 +192,10 @@ remove=Remove
 rename=Rename
 reporting_rates=Reporting rates
 revision=Revision
-search=Search
+search=C\u0103utare
 search_for_favorites=Search for favorites
 search_for_user_groups=Search for user groups
-select=Select
+select=Selectare
 select_groups=Select groups
 selection_mode=Selection mode
 select_dataset=Select dataset
@@ -206,13 +206,13 @@ select_organisation_unit_groups=Select organisation unit groups
 select_organisation_unit_levels=Select organisation unit levels
 select_organisation_units=Select organisation units
 select_period=Select period
-select_program=Select program
+select_program=Selectare program
 select_service=Select service
 select_stage=Select stage
 select_sub_units=Select sub-units
 select_year=Select year
 service_url=Service URL
-share=Share
+share=Partajare
 share_with_other_people=Share with others
 sharing_settings=Sharing settings
 show=Show
@@ -271,7 +271,7 @@ write_interpretation=Write interpretation
 write_your_interpretation=Write your interpretation
 yearly=Anual
 yes=Da
-yesterday=Yesterday
+yesterday=Ieri
 you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
 you_do_not_have_access_to_all_items_in_this_favorite=You do not have access to all items in this favorite
 
