--- a/i18n/i18n_app_tet.properties
+++ b/i18n/i18n_app_tet.properties
@@ -1,6 +1,6 @@
 about=Konab\u00e1
 add_legend=Add legend
-add_new=Add new
+add_new=Aumenta foun
 address=Enderesu
 add_to_dashboard=Add to dashboard
 aggregation_type=Tipu agregasaun
@@ -8,35 +8,35 @@ allow_external_access=Permite asesu externu
 and_or_lower_than=And/or lower than
 attribution=Attribution
 automatic=Automatic
-average=Average
+average=M\u00e9dia
 bimonthly=Bimensal
 boundary_layer=Boundary layer
 by_data_element=Tuir elementu dadus
-cancel=Cancel
+cancel=Kansela
 can_edit_and_view=Bele edita i har\u00e9
-can_view=Can view
-chart=Chart
+can_view=Bele har\u00e9
+chart=Gr\u00e1fiku
 classes_method=Classes / method
 clear=Ham\u00f3s
 clear_map=Clear map
 clustering=Clustering
-code=Code
+code=K\u00f3digu
 color_scale=Color scale
 coordinate_field=Coordinate field
 coordinates=Coordinates
 coordinates_could_not_be_loaded=Coordinates could not be loaded
-count=Count
-create=Create
-created_by=Created by
+count=Konta
+create=Kria
+created_by=Kria husi
 current_legends=Current legends
 daily=Di\u00e1riu
-data=Data
+data=Dadus
 data_and_periods=Data and periods
-dataelement=Data element
+dataelement=Elementu dadus
 dataelement_group=Data element group
-dataset=Data set
-delete=Delete
-delete_favorite=Delete favorite
+dataset=Pakote dadus
+delete=Soe
+delete_favorite=Soe favoritu
 details=Detalles
 download=Hatun
 download_map_as_png=Download map as PNG
@@ -70,11 +70,11 @@ filter=Filtru
 filter_by_value=Filter by value
 financial_april=Abril finanseiru
 financial_july=Jullu finanseiru
-financial_oct=Financial year (Start October)
+financial_oct=Outubru finanseiru
 google_hybrid=Google Hybrid
 google_streets=Google Streets
 go_to_charts=B\u00e1 gr\u00e1fikus
-go_to_pivot_tables=Go to pivot tables
+go_to_pivot_tables=B\u00e1 tabela din\u00e1mika
 greater_than=Greater than
 group=Group
 group_nearby_events=Group nearby events
@@ -84,30 +84,30 @@ has_no_orgunits=has no organisation units
 high_color_size=High color / size
 highlight_color=Highlight color
 high_size=High size
-home=Home
-indicator=Indicator
+home=P\u00e1jina inisial
+indicator=Indikador
 indicator_group=Indicator group
 information=Information
 infrastructural_data=Infrastructural data
 invalid_parameter=Invalid parameter
 item_type=Item type
 landcover=Landcover
-last_2_sixmonths=Last 2 six-months
+last_2_sixmonths=Fulan-n\u00e9n 2 ikus
 last_3_months=Fulan 3 ikus
-last_4_quarters=Last 4 quarters
+last_4_quarters=Trimestre 4 ikus liu
 last_4_weeks=Semana 4 ikus
-last_5_financial_years=Last 5 financial years
+last_5_financial_years=Tinan finanseiru 5 ikus
 last_6_bimonths=Bimensal 6 ikus liu
 last_6_months=Fulan 6 ikus
 last_12_months=Fulan 12 ikus
 last_12_weeks=Semana 12 ikus
-last_52_weeks=Last 52 weeks
-last_bimonth=Last bi-month
-last_financial_year=Last financial year
-last_month=Last month
-last_quarter=Last quarter
-last_sixmonth=Last six-month
-last_week=Last week
+last_52_weeks=Semana 52 ikus
+last_bimonth=Bimensal kotuk
+last_financial_year=Tinan finanseiru kotuk
+last_month=Fulan kotuk
+last_quarter=Trimestre kotuk
+last_sixmonth=Fulan-n\u00e9n ikus
+last_week=Semana kotuk
 last_5_years=Tinan 5 kotuk
 last_year=Tinan kotuk
 latitude=Latitude
@@ -127,8 +127,8 @@ level=Level
 longitude=Longitude
 low_color_size=Low color / size
 low_size=Low size
-manage_favorites=Manage favorites
-map=Map
+manage_favorites=Jere favoritus
+map=Mapa
 max=Max
 min=Min
 min_max_c=Min/max \u00b0C
@@ -137,8 +137,8 @@ min_max_people=Min/max people
 min_max_rainfall=Min/max rainfall
 min_max_value=Min/max value
 monthly=Mensal
-name=Name
-next=Next
+name=Naran
+next=Pr\u00f3ximu
 nighttime_lights=Nighttime lights
 no=Lae
 no_groupset_selected=No group set selected
@@ -153,11 +153,11 @@ no_selected_items=No selected items
 no_system_info_found=No system info found
 no_valid_coordinates_found=No valid coordinates found
 open_last_chart=Loke gr\u00e1fiku ikus
-open_last_table=Open last table
+open_last_table=Loke tabela ikus
 openstreetmap=OpenStreetMap
 open_this_map_as_chart=Open this map as chart
 open_this_map_as_table=Open this map as table
-options=Options
+options=Opsoens
 organisation_unit=Unidade organizasional
 organisation_unit_group_icons=Organisation unit group icons
 organisationunit_groupset=Organisation unit group set
@@ -165,10 +165,10 @@ organisation_units=Unidade organizasional
 organisationunit_search=Organisation unit search
 osm_light=OSM Light
 overwrite=Hakerek sae leten
-overwrite_favorite=Overwrite favorite
+overwrite_favorite=Hakerek sae favoritu nia leten
 page=Page
 parent_unit=Parent unit
-period=Period
+period=Per\u00edodu
 period_type=Period type
 phone_number=Phone number
 placement=Placement
@@ -184,42 +184,42 @@ previous=Anterior
 program=Program
 program_indicators=Program indicators
 public_access=Asesu p\u00fabliku
-quarterly=Quarterly
+quarterly=Trimestral
 relative=Relativu
 relocate=Relocate
 relocate_facility=Relocate facility
-remove=Remove
-rename=Rename
+remove=Hasai
+rename=Tau naran foun
 reporting_rates=Taxas relat\u00f3riu
 revision=Revision
 search=Search
-search_for_favorites=Search for favorites
-search_for_user_groups=Search for user groups
-select=Select
+search_for_favorites=Buka favoritus
+search_for_user_groups=Buka grupu utilizadores
+select=Selesiona
 select_groups=Select groups
 selection_mode=Selection mode
 select_dataset=Select dataset
 select_layer=Select layer
 select_layer_from_google_earth_engine=Select layer from Google Earth Engine
 select_levels=Select levels
-select_organisation_unit_groups=Select organisation unit groups
-select_organisation_unit_levels=Select organisation unit levels
+select_organisation_unit_groups=Hili grupus unidades organizasionais
+select_organisation_unit_levels=Hili n\u00edveis unidades organizasionais
 select_organisation_units=Hili unidades organizasionais
-select_period=Select period
+select_period=Hili per\u00edodu
 select_program=Select program
 select_service=Select service
 select_stage=Select stage
 select_sub_units=Hilit sub-unidades
 select_year=Select year
 service_url=Service URL
-share=Share
+share=Partilla
 share_with_other_people=Share with others
-sharing_settings=Sharing settings
+sharing_settings=Definisoens partilla
 show=Hatudu
 show_circular_area=Show circular area with radius (m)
 show_information_sheet=Show information
 show_lon_lat=Show longitude/latitude
-sixmonthly=Six-monthly
+sixmonthly=Semestral
 sixmonthly_april=Abril semestral
 stage=Stage
 start_date=Data hah\u00fa
@@ -233,7 +233,7 @@ sub_x2_units=Sub-x2-units
 sum=Soma
 swap_lon_lat=Swap longitude/latitude
 symbol_layer=Facility layer
-table=Table
+table=Tabela
 temperature=Temperature
 text_filter=Text filter
 thematic_layer=Thematic layer
@@ -247,7 +247,7 @@ this_month=This month
 this_quarter=This quarter
 this_sixmonth=This six-month
 this_week=This week
-this_year=This year
+this_year=Tina ida ne'e
 time_since_last_data_update=Elapsed time since last data update
 today=Today
 totals=Totais
@@ -256,12 +256,12 @@ username=Utilizador nia Naran
 user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
 user_organisation_unit=User organisation unit
 user_ou=User OU
-user_sub_units=User sub-units
-user_sub_x2_units=User sub-x2-units
+user_sub_units=Utilizador nia  sub-unidades
+user_sub_x2_units=Utilizador nia sub-x2-unidades
 value=Valor
-value_type=Value type
+value_type=Tipu Valor
 variance=Variasaun
-version=Version
+version=Versaun
 weekly=Semanal
 weekly_wednesday=Weekly (Start Wednesday)
 weekly_thursday=Weekly (Start Thursday)
