--- a/i18n/i18n_app_vi.properties
+++ b/i18n/i18n_app_vi.properties
@@ -1,113 +1,113 @@
 about=Gi\u1edbi thi\u1ec7u
 add_legend=Th\u00eam ch\u00fa th\u00edch
-add_new=Add new
+add_new=Th\u00eam s\u1ef1 ki\u1ec7n m\u1edbi
 address=\u0110\u1ecba ch\u1ec9
 add_to_dashboard=Th\u00eam v\u00e0o b\u1ea3ng \u0111i\u1ec1u khi\u1ec3n
 aggregation_type=Ki\u1ec3u t\u1ed5ng h\u1ee3p
 allow_external_access=Cho ph\u00e9p truy c\u1eadp t\u1eeb b\u00ean ngo\u00e0i
-and_or_lower_than=And/or lower than
+and_or_lower_than=V\u00e0/ho\u1eb7c th\u1ea5p h\u01a1n
 attribution=Thu\u1ed9c t\u00ednh
 automatic=T\u1ef1 \u0111\u1ed9ng
 average=Trung b\u00ecnh
 bimonthly=H\u00e0ng 2 th\u00e1ng
-boundary_layer=Boundary layer
+boundary_layer=L\u1edbp ranh gi\u1edbi
 by_data_element=Theo Ph\u1ea7n T\u1eed D\u1eef Li\u1ec7u
-cancel=Cancel
+cancel=H\u1ee7y
 can_edit_and_view=C\u00f3 th\u1ec3 xem v\u00e0 ch\u1ec9nh s\u1eeda
-can_view=Can view
-chart=Chart
+can_view=C\u00f3 th\u1ec3 xem
+chart=Bi\u1ec3u \u0111\u1ed3
 classes_method=L\u1edbp / ph\u01b0\u01a1ng th\u1ee9c
 clear=X\u00f3a
 clear_map=X\u00f3a b\u1ea3n \u0111\u1ed3
 clustering=Ch\u00f9m
-code=Code
+code=M\u00e3
 color_scale=Kho\u1ea3ng m\u00e0u
 coordinate_field=V\u00f9ng t\u1ecda \u0111\u1ed9
 coordinates=To\u1ea1 \u0111\u1ed9
 coordinates_could_not_be_loaded=Kh\u00f4ng th\u1ec3 n\u1ea1p t\u1ecda \u0111\u1ed9
-count=Count
-create=Create
-created_by=Created by
-current_legends=Current legends
+count=\u0110\u1ebfm
+create=T\u1ea1o
+created_by=\u0110\u01b0\u1ee3c t\u1ea1o b\u1edfi
+current_legends=Ch\u00fa th\u00edch hi\u1ec7n t\u1ea1i
 daily=H\u00e0ng Ng\u00e0y
-data=Data
-data_and_periods=Data and periods
-dataelement=Data element
+data=D\u1eef li\u1ec7u
+data_and_periods=D\u1eef li\u1ec7u v\u00e0 th\u1eddi \u0111i\u1ec3m
+dataelement=Ph\u1ea7n t\u1eed d\u1eef li\u1ec7u
 dataelement_group=Nh\u00f3m d\u1eef li\u1ec7u
-dataset=Data set
-delete=Delete
-delete_favorite=Delete favorite
+dataset=T\u1eadp d\u1eef li\u1ec7u
+delete=X\u00f3a
+delete_favorite=X\u00f3a b\u00e1o c\u00e1o th\u01b0\u1eddng d\u00f9ng
 details=Chi ti\u1ebft
 download=T\u1ea3i v\u1ec1
-download_map_as_png=Download map as PNG
-drill_down_one_level=Drill down one level
+download_map_as_png=T\u1ea3i b\u1ea3n \u0111\u1ed3 d\u1ea1ng PNG
+drill_down_one_level=Xem tuy\u1ebfn d\u01b0\u1edbi
 drill_up_one_level=Xem tuy\u1ebfn tr\u00ean
 duplicate=Tr\u00f9ng l\u1eb7p
 earthengine_layer=B\u1ea3n \u0111\u1ed3 tr\u00e1i \u0111\u1ea5t (Google Earth Engine)
 earth_engine_layer_legend=Ch\u00fa th\u00edch Google Earth Engine
 elevation=\u0110\u1ed9 cao
-edit_layer=Edit layer
-edit_legend=Edit legend
-email=Email
+edit_layer=S\u1eeda l\u1edbp
+edit_legend=S\u1eeda ch\u00fa th\u00edch
+email=Th\u01b0 \u0111i\u1ec7n t\u1eed (Email)
 end_date=Ng\u00e0y k\u1ebft th\u00fac
 end_value_should_be_bigger_than_start_value=Gi\u00e1 tr\u1ecb cu\u1ed1i n\u00ean l\u1edbn h\u01a1n gi\u00e1 tr\u1ecb \u0111\u1ea7u
 equal_counts=Chia \u0111\u1ec1u s\u1ed1 \u0110\u01a1n V\u1ecb
-equal_intervals=Equal intervals
+equal_intervals=Chia \u0111\u1ec1u t\u1ed5ng Gi\u00e1 tr\u1ecb d\u1eef li\u1ec7u
 event_data_item=M\u1ee5c d\u1eef li\u1ec7u s\u1ef1 ki\u1ec7n
 event_data_items=M\u1ee5c d\u1eef li\u1ec7u s\u1ef1 ki\u1ec7n
-event_layer=Event layer
-event_location=Event location
+event_layer=L\u1edbp s\u1ef1 ki\u1ec7n
+event_location=\u0110\u1ecba \u0111i\u1ec3m s\u1ef1 ki\u1ec7n
 event_time=Th\u1eddi \u0111i\u1ec3m s\u1ef1 ki\u1ec7n
 external_layer=L\u1edbp ngo\u1ea1i
 external_layer_legend=Ch\u00fa th\u00edch l\u1edbp ngo\u1ea1i
-facility_layer=Facility layer
+facility_layer=L\u1edbp C\u01a1 S\u1edf
 facility_layer_export_currently_not_supported=Hi\u1ec7n t\u1ea1i kh\u00f4ng h\u1ed7 tr\u1ee3 xu\u1ea5t L\u1edbp C\u01a1 S\u1edf
-facility_layer_legend=Facility layer legend
+facility_layer_legend=Ch\u00fa th\u00edch L\u1edbp C\u01a1 S\u1edf
 favorite_name=T\u00ean b\u00e1o c\u00e1o th\u01b0\u1eddng d\u00f9ng
 favorite_outdated_create_new=B\u00e1o c\u00e1o th\u01b0\u1eddng d\u00f9ng \u0111\u00e3 l\u1ed7i th\u1eddi - xin vui l\u00f2ng t\u1ea1o b\u00e1o c\u00e1o m\u1edbi
 favorites=B\u00e1o c\u00e1o th\u01b0\u1eddng d\u00f9ng
 filter=B\u1ed9 l\u1ecdc
-filter_by_value=Filter by value
+filter_by_value=L\u1ecdc theo gi\u00e1 tr\u1ecb
 financial_april=N\u0103m T\u00e0i Ch\u00ednh (B\u1eaft \u0111\u1ea7u Th\u00e1ng 4)
 financial_july=N\u0103m T\u00e0i Ch\u00ednh (B\u1eaft \u0111\u1ea7u Th\u00e1ng 7)
-financial_oct=Financial year (Start October)
-google_hybrid=Google Hybrid
+financial_oct=N\u0103m T\u00e0i Ch\u00ednh (B\u1eaft \u0111\u1ea7u Th\u00e1ng 10)
+google_hybrid=B\u1ea3n \u0111\u1ed3 th\u1ef1c (Google Hybrid)
 google_streets=B\u1ea3n \u0111\u1ed3 \u0111\u01b0\u1eddng ph\u1ed1 (Google Streets)
 go_to_charts=M\u1edf d\u1ee9ng d\u1ee5ng Bi\u1ec3u \u0110\u1ed3
-go_to_pivot_tables=Go to pivot tables
-greater_than=Greater than
-group=Group
+go_to_pivot_tables=M\u1edf \u1ee9ng d\u1ee5ng B\u1ea3ng
+greater_than=L\u1edbn h\u01a1n
+group=Nh\u00f3m
 group_nearby_events=Nh\u00f3m s\u1ef1 ki\u1ec7n l\u00e2n c\u1eadn
 groups=C\u00e1c nh\u00f3m
 groupset=Nh\u00f3m t\u1eadp h\u1ee3p
-has_no_orgunits=has no organisation units
-high_color_size=High color / size
-highlight_color=Highlight color
-high_size=High size
-home=Home
-indicator=Indicator
+has_no_orgunits=kh\u00f4ng c\u00f3 \u0111\u01a1n v\u1ecb
+high_color_size=K\u00edch c\u1ee1 / M\u00e0u cho gi\u00e1 tr\u1ecb l\u1edbn
+highlight_color=M\u00e0u n\u1ed5i b\u1eadt
+high_size=C\u1ee1 v\u00f2ng gi\u00e1 tr\u1ecb cao
+home=Trang ch\u1ee7
+indicator=Ch\u1ec9 s\u1ed1
 indicator_group=Nh\u00f3m ch\u1ec9 s\u1ed1
 information=Th\u00f4ng tin
-infrastructural_data=Infrastructural data
+infrastructural_data=D\u1eef li\u1ec7u h\u1ea1 t\u1ea7ng
 invalid_parameter=Tham s\u1ed1 kh\u00f4ng h\u1ee3p l\u1ec7
 item_type=Ki\u1ec3u m\u1ee5c
 landcover=Ph\u1ee7 \u0111\u1ea5t
-last_2_sixmonths=Last 2 six-months
+last_2_sixmonths=2 l\u1ea7n 6-Th\u00e1ng tr\u01b0\u1edbc
 last_3_months=3 Th\u00e1ng tr\u01b0\u1edbc
-last_4_quarters=Last 4 quarters
+last_4_quarters=4 Qu\u00fd tr\u01b0\u1edbc
 last_4_weeks=4 Tu\u1ea7n tr\u01b0\u1edbc
-last_5_financial_years=Last 5 financial years
+last_5_financial_years=5 n\u0103m t\u00e0i ch\u00ednh tr\u01b0\u1edbc
 last_6_bimonths=6 l\u1ea7n 2-Th\u00e1ng tr\u01b0\u1edbc
 last_6_months=6 th\u00e1ng tr\u01b0\u1edbc
 last_12_months=12 Th\u00e1ng tr\u01b0\u1edbc
 last_12_weeks=12 Tu\u1ea7n tr\u01b0\u1edbc
-last_52_weeks=Last 52 weeks
-last_bimonth=Last bi-month
-last_financial_year=Last financial year
-last_month=Last month
-last_quarter=Last quarter
-last_sixmonth=Last six-month
-last_week=Last week
+last_52_weeks=52 Tu\u1ea7n tr\u01b0\u1edbc
+last_bimonth=2-Th\u00e1ng tr\u01b0\u1edbc
+last_financial_year=N\u0103m T\u00e0i Ch\u00ednh tr\u01b0\u1edbc
+last_month=Th\u00e1ng tr\u01b0\u1edbc
+last_quarter=Qu\u00fd tr\u01b0\u1edbc
+last_sixmonth=6-Th\u00e1ng tr\u01b0\u1edbc
+last_week=Tu\u1ea7n tr\u01b0\u1edbc
 last_5_years=5 N\u0103m tr\u01b0\u1edbc
 last_year=N\u0103m tr\u01b0\u1edbc
 latitude=V\u0129 \u0111\u1ed9
@@ -116,7 +116,7 @@ layers=L\u1edbp
 layer_stack_transparency=\u0110\u1ed9 m\u1edd l\u1edbp
 legend_name=T\u00ean Ch\u00fa Th\u00edch
 legend_name_is_required=Y\u00eau c\u1ea7u c\u00f3 t\u00ean Ch\u00fa Th\u00edch
-legends=Legends
+legends=Ch\u00fa th\u00edch
 legendset=T\u1eadp Ch\u00fa Th\u00edch
 legend_sets_available=T\u1eadp ch\u00fa th\u00edch hi\u1ec7n c\u00f3
 legend_set_name=T\u00ean T\u1eadp Ch\u00fa Th\u00edch
@@ -124,21 +124,21 @@ legendsets=T\u1eadp Ch\u00fa Th\u00edch
 legend_symbolizer=B\u1ed9 K\u00fd Hi\u1ec7u
 legend_type=Lo\u1ea1i ch\u00fa gi\u1ea3i
 level=C\u1ea5p
-longitude=Longitude
-low_color_size=Low color / size
-low_size=Low size
-manage_favorites=Manage favorites
-map=Map
+longitude=Kinh \u0111\u1ed9
+low_color_size=K\u00edch c\u1ee1 v\u00f2ng / m\u00e0u gi\u00e1 tr\u1ecb th\u1ea5p
+low_size=C\u1ee1 v\u00f2ng gi\u00e1 tr\u1ecb th\u1ea5p
+manage_favorites=Qu\u1ea3n l\u00fd B\u00e1o c\u00e1o th\u01b0\u1eddng d\u00f9ng
+map=B\u1ea3n \u0110\u1ed3
 max=L\u1edbn nh\u1ea5t
-min=Min
+min=Nh\u1ecf nh\u1ea5t
 min_max_c=Min/max \u00b0C
-min_max_elevation=Min/max elevation
+min_max_elevation=G\u00f3c l\u1edbn nh\u1ea5t/nh\u1ecf nh\u1ea5t
 min_max_people=Ng\u01b0\u1eddi l\u1edbn nh\u1ea5t/nh\u1ecf nh\u1ea5t
 min_max_rainfall=L\u01b0\u1ee3ng m\u01b0a l\u1edbn nh\u1ea5t/nh\u1ecf nh\u1ea5t
 min_max_value=Gi\u00e1 tr\u1ecb l\u1edbn nh\u1ea5t/nh\u1ecf nh\u1ea5t
 monthly=H\u00e0ng Th\u00e1ng
-name=Name
-next=Next
+name=T\u00ean
+next=Sau
 nighttime_lights=\u00c1nh s\u00e1ng \u0111\u00eam
 no=Kh\u00f4ng
 no_groupset_selected=Ch\u01b0a ch\u1ecdn T\u1eadp Nh\u00f3m
@@ -146,132 +146,132 @@ no_map_to_save=Kh\u00f4ng c\u00f3 b\u1ea3n \u0111\u1ed3 \u0111\u1ec3 l\u01b0u
 none=Kh\u00f4ng
 no_event_coordinates_found=Kh\u00f4ng t\u00ecm th\u1ea5y T\u1ecda \u0110\u1ed9 S\u1ef1 Ki\u1ec7n
 no_organisation_unit_levels=Kh\u00f4ng c\u00f3 Tuy\u1ebfn \u0110\u01a1n V\u1ecb
-no_organisation_units_specified=No organisation units specified
-no_period_selected=No period selected
+no_organisation_units_specified=Ch\u01b0a x\u00e1c \u0111\u1ecbnh \u0110\u01a1n V\u1ecb
+no_period_selected=Ch\u01b0a ch\u1ecdn th\u1eddi \u0111i\u1ec3m
 no_program_stage_selected=Ch\u01b0a ch\u1ecdn Giai \u0110o\u1ea1n Ch\u01b0\u01a1ng Tr\u00ecnh
 no_selected_items=Ch\u01b0a ch\u1ecdn M\u1ee5c
 no_system_info_found=Kh\u00f4ng t\u00ecm th\u1ea5y th\u00f4ng tin h\u1ec7 th\u1ed1ng
-no_valid_coordinates_found=No valid coordinates found
+no_valid_coordinates_found=Kh\u00f4ng t\u00ecm th\u1ea5y T\u1ecda \u0110\u1ed9 h\u1ee3p l\u1ec7
 open_last_chart=M\u1edf bi\u1ec3u \u0111\u1ed3 g\u1ea7n nh\u1ea5t
-open_last_table=Open last table
+open_last_table=M\u1edf b\u1ea3ng tr\u01b0\u1edbc
 openstreetmap=B\u1ea3n \u0111\u1ed3 giao th\u00f4ng (OpenStreetMap)
-open_this_map_as_chart=Open this map as chart
+open_this_map_as_chart=Xem b\u1ea3n \u0111\u1ed3 n\u00e0y b\u1eb1ng Bi\u1ec3u \u0110\u1ed3
 open_this_map_as_table=Xem b\u1ea3n \u0111\u1ed3 n\u00e0y b\u1eb1ng B\u1ea3ng Xoay
-options=Options
+options=T\u00f9y ch\u1ecdn
 organisation_unit=\u0110\u01a1n v\u1ecb
 organisation_unit_group_icons=K\u00fd hi\u1ec7u Nh\u00f3m \u0110\u01a1n V\u1ecb
 organisationunit_groupset=T\u1eadp nh\u00f3m \u0111\u01a1n v\u1ecb
 organisation_units=\u0110\u01a1n v\u1ecb
 organisationunit_search=T\u00ecm ki\u1ebfm \u0111\u01a1n v\u1ecb
-osm_light=OSM Light
+osm_light=B\u1ea3n \u0111\u1ed3 \u00e1nh s\u00e1ng OSM
 overwrite=L\u01b0u \u0111\u00e8
-overwrite_favorite=Overwrite favorite
-page=Page
-parent_unit=Parent unit
-period=Period
+overwrite_favorite=L\u01b0u \u0111\u00e8 B\u00e1o C\u00e1o Th\u01b0\u1eddng D\u00f9ng
+page=Trang
+parent_unit=\u0110\u01a1n V\u1ecb Cha
+period=Th\u1eddi \u0111i\u1ec3m
 period_type=Lo\u1ea1i th\u1eddi \u0111i\u1ec3m
 phone_number=S\u1ed1 \u0111i\u1ec7n tho\u1ea1i
-placement=Placement
-please_create_map_first=Please create a map first
+placement=\u0110\u1ecbnh V\u1ecb
+please_create_map_first=Xin vui l\u00f2ng t\u1ea1o b\u1ea3n \u0111\u1ed3
 please_enter_a_name=Ch\u01b0a nh\u1eadp t\u00ean
-please_enter_map_title=Please enter a map title
+please_enter_map_title=Xin vui l\u00f2ng nh\u1eadp ti\u00eau \u0111\u1ec1 b\u1ea3n \u0111\u1ed3
 point_color=M\u00e0u \u0110i\u1ec3m
-point_radius=Point radius
+point_radius=T\u1ec9 l\u1ec7 \u0110i\u1ec3m
 population_density=M\u1eadt \u0111\u1ed9 d\u00e2n s\u1ed1
 precipitation=L\u01b0\u1ee3ng m\u01b0a
 predefined=\u0110\u1ecbnh s\u1eb5n
 previous=Tr\u01b0\u1edbc
 program=Ch\u01b0\u01a1ng tr\u00ecnh
-program_indicators=Program indicators
+program_indicators=Ch\u1ec9 S\u1ed1 Ch\u01b0\u01a1ng Tr\u00ecnh
 public_access=C\u00f4ng khai
-quarterly=Quarterly
+quarterly=H\u00e0ng qu\u00fd
 relative=T\u01b0\u01a1ng \u0111\u1ed1i
-relocate=Relocate
+relocate=Di d\u1eddi
 relocate_facility=Di d\u1eddi c\u01a1 s\u1edf
-remove=Remove
-rename=Rename
+remove=G\u1ee1
+rename=\u0110\u1ed5i t\u00ean
 reporting_rates=T\u1ef7 l\u1ec7 b\u00e1o c\u00e1o
-revision=Revision
-search=Search
+revision=B\u1ea3n hi\u1ec7u ch\u1ec9nh
+search=T\u00ecm ki\u1ebfm
 search_for_favorites=T\u00ecm B\u00e1o C\u00e1o Th\u01b0\u1eddng D\u00f9ng
-search_for_user_groups=Search for user groups
-select=Select
+search_for_user_groups=T\u00ecm ki\u1ebfm nh\u00f3m ng\u01b0\u1eddi d\u00f9ng
+select=Ch\u1ecdn
 select_groups=Ch\u1ecdn nh\u00f3m
-selection_mode=Selection mode
+selection_mode=Ch\u1ecdn Ch\u1ebf \u0110\u1ed9
 select_dataset=Ch\u1ecdn T\u1eadp D\u1eef Li\u1ec7u
 select_layer=Ch\u1ecdn l\u1edbp
-select_layer_from_google_earth_engine=Select layer from Google Earth Engine
+select_layer_from_google_earth_engine=Ch\u1ecdn l\u1edbp t\u1eeb Google Earth Engine
 select_levels=Ch\u1ecdn Tuy\u1ebfn \u0110\u01a1n V\u1ecb
-select_organisation_unit_groups=Select organisation unit groups
-select_organisation_unit_levels=Select organisation unit levels
+select_organisation_unit_groups=Ch\u1ecdn Nh\u00f3m \u0110\u01a1n V\u1ecb
+select_organisation_unit_levels=Ch\u1ecdn Tuy\u1ebfn \u0110\u01a1n V\u1ecb
 select_organisation_units=Ch\u1ecdn \u0110\u01a1n V\u1ecb
-select_period=Select period
-select_program=Select program
+select_period=Ch\u1ecdn th\u1eddi \u0111i\u1ec3m
+select_program=Ch\u1ecdn Ch\u01b0\u01a1ng Tr\u00ecnh
 select_service=Ch\u1ecdn d\u1ecbch v\u1ee5
-select_stage=Select stage
+select_stage=Ch\u1ecdn Giai \u0110o\u1ea1n Ch\u01b0\u01a1ng Tr\u00ecnh
 select_sub_units=Ch\u1ecdn \u0110\u01a1n V\u1ecb Con
-select_year=Select year
+select_year=Ch\u1ecdn n\u0103m
 service_url=D\u1ecbch v\u1ee5 URL
-share=Share
+share=Chia s\u1ebb
 share_with_other_people=Chia s\u1ebb v\u1edbi ng\u01b0\u1eddi kh\u00e1c
-sharing_settings=Sharing settings
+sharing_settings=C\u00e0i \u0111\u1eb7t chia s\u1ebb
 show=Hi\u1ec7n
 show_circular_area=Hi\u1ec7n v\u00f9ng bao ph\u1ee7 v\u1edbi t\u1ec9 l\u1ec7 (m)
-show_information_sheet=Show information
+show_information_sheet=Hi\u1ec7n th\u00f4ng tin
 show_lon_lat=Hi\u1ec7n kinh \u0111\u1ed9/v\u0129 \u0111\u1ed9
-sixmonthly=Six-monthly
+sixmonthly=H\u00e0ng 6-Th\u00e1ng
 sixmonthly_april=H\u00e0ng 6-Th\u00e1ng b\u1eaft \u0111\u1ea7u Th\u00e1ng T\u01b0
-stage=Stage
+stage=Giai \u0110o\u1ea1n Ch\u01b0\u01a1ng Tr\u00ecnh
 start_date=Ng\u00e0y b\u1eaft \u0111\u1ea7u
-start_end_dates=Start/end dates
-start_end_value=Start/end value
+start_end_dates=Ng\u00e0y b\u1eaft \u0111\u1ea7u/k\u1ebft th\u00fac
+start_end_value=Gi\u00e1 tr\u1ecb \u0111\u1ea7u/cu\u1ed1i
 stddev=\u0110\u1ed9 l\u1ec7ch chu\u1ea9n
-steps=Steps
+steps=B\u01b0\u1edbc
 style=Ki\u1ec3u d\u00e1ng
-sub_units=Sub-units
+sub_units=\u0110\u01a1n-v\u1ecb-con
 sub_x2_units=\u0110\u01a1n-v\u1ecb-con-x2
 sum=T\u1ed5ng
-swap_lon_lat=Swap longitude/latitude
+swap_lon_lat=Tr\u00e1o kinh \u0111\u1ed9/v\u0129 \u0111\u1ed9
 symbol_layer=L\u1edbp C\u01a1 S\u1edf
-table=Table
+table=B\u1ea3ng
 temperature=Nhi\u1ec7t \u0111\u1ed9
-text_filter=Text filter
-thematic_layer=Thematic layer
-thematic_layer_1_legend=Thematic layer 1 legend
+text_filter=L\u1ecdc v\u0103n b\u1ea3n
+thematic_layer=L\u1edbp Chuy\u00ean \u0110\u1ec1
+thematic_layer_1_legend=Ch\u00fa Th\u00edch L\u1edbp Chuy\u00ean \u0110\u1ec1 1
 thematic_layer_2_legend=Ch\u00fa Th\u00edch L\u1edbp Chuy\u00ean \u0110\u1ec1 2
-thematic_layer_3_legend=Thematic layer 3 legend
-thematic_layer_4_legend=Thematic layer 4 legend
+thematic_layer_3_legend=Ch\u00fa Th\u00edch L\u1edbp Chuy\u00ean \u0110\u1ec1 3
+thematic_layer_4_legend=Ch\u00fa Th\u00edch L\u1edbp Chuy\u00ean \u0110\u1ec1 4
 this_bimonth=L\u1ea7n Hai-Th\u00e1ng n\u00e0y
 this_financial_year=N\u0103m T\u00e0i Ch\u00ednh n\u00e0y
 this_month=Th\u00e1ng n\u00e0y
 this_quarter=Qu\u00fd n\u00e0y
-this_sixmonth=This six-month
+this_sixmonth=6 th\u00e1ng n\u00e0y
 this_week=Tu\u1ea7n n\u00e0y
-this_year=This year
+this_year=N\u0103m nay
 time_since_last_data_update=Th\u1eddi gian tr\u00f4i qua t\u1eeb khi c\u1eadp nh\u1eadt l\u1ea7n cu\u1ed1i
 today=H\u00f4m nay
 totals=T\u1ed5ng
 update=C\u1eadp nh\u1eadt
 username=T\u00ean \u0111\u0103ng nh\u1eadp
-user_is_not_assigned_to_any_organisation_units=User is not assigned to any organisation units
+user_is_not_assigned_to_any_organisation_units=Ng\u01b0\u1eddi d\u00f9ng kh\u00f4ng \u0111\u01b0\u1ee3c g\u00e1n cho b\u1ea5t k\u1ef3 \u0111\u01a1n v\u1ecb n\u00e0o
 user_organisation_unit=\u0110\u01a1n v\u1ecb ng\u01b0\u1eddi d\u00f9ng
-user_ou=User OU
-user_sub_units=User sub-units
-user_sub_x2_units=User sub-x2-units
+user_ou=\u0110\u01a1n V\u1ecb ng\u01b0\u1eddi d\u00f9ng
+user_sub_units=\u0110\u01a1n-v\u1ecb-con ng\u01b0\u1eddi d\u00f9ng
+user_sub_x2_units=\u0110\u01a1n-v\u1ecb-con-x2 ng\u01b0\u1eddi d\u00f9ng
 value=Gi\u00e1 tr\u1ecb
-value_type=Value type
+value_type=Lo\u1ea1i gi\u00e1 tr\u1ecb
 variance=Ph\u01b0\u01a1ng sai
-version=Version
+version=Phi\u00ean b\u1ea3n
 weekly=H\u00e0ng Tu\u1ea7n
-weekly_wednesday=Weekly (Start Wednesday)
+weekly_wednesday=H\u00e0ng tu\u1ea7n (B\u1eaft \u0111\u1ea7u t\u1eeb Th\u1ee9 T\u01b0)
 weekly_thursday=H\u00e0ng tu\u1ea7n (B\u1eaft \u0111\u1ea7u t\u1eeb Th\u1ee9 N\u0103m)
 weekly_saturday=H\u00e0ng tu\u1ea7n (B\u1eaft \u0111\u1ea7u t\u1eeb Th\u1ee9 B\u1ea3y)
-weekly_sunday=Weekly (Start Sunday)
-write_interpretation=Write interpretation
+weekly_sunday=H\u00e0ng tu\u1ea7n (B\u1eaft \u0111\u1ea7u t\u1eeb Ch\u1ee7 nh\u1eadt)
+write_interpretation=Vi\u1ebft Di\u1ec5n Gi\u1ea3i
 write_your_interpretation=Vi\u1ebft Di\u1ec5n Gi\u1ea3i c\u1ee7a b\u1ea1n
 yearly=H\u00e0ng N\u0103m
 yes=C\u00f3
-yesterday=Yesterday
-you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
+yesterday=H\u00f4m qua
+you_can_not_select_organisation_units_below_the_selected_level=B\u1ea1n kh\u00f4ng th\u1ec3 ch\u1ecdn \u0110\u01a1n V\u1ecb th\u1ea5p h\u01a1n Tuy\u1ebfn \u0110\u01a1n V\u1ecb \u0111\u00e3 ch\u1ecdn
 you_do_not_have_access_to_all_items_in_this_favorite=B\u1ea1n kh\u00f4ng c\u00f3 quy\u1ec1n truy c\u1eadp t\u1ea5t c\u1ea3 m\u1ee5c trong b\u00e1o c\u00e1o n\u00e0y
 
